1571713262 | 41 files | M bin/version.txt,  M content/panorama/localization/tenfoot_finnish.txt,  M content/panorama/localization/tenfoot_french.txt,  M content/panorama/localization/tenfoot_russian.txt,  M content/vrmonitor/translations/vrmonitor_brazilian.txt,  M content/vrmonitor/translations/vrmonitor_bulgarian.txt,  M content/vrmonitor/translations/vrmonitor_czech.txt,  M content/vrmonitor/translations/vrmonitor_danish.txt,  M content/vrmonitor/translations/vrmonitor_dutch.txt,  M content/vrmonitor/translations/vrmonitor_errors_dutch.txt,  M content/vrmonitor/translations/vrmonitor_errors_finnish.txt,  M content/vrmonitor/translations/vrmonitor_errors_german.txt,  M content/vrmonitor/translations/vrmonitor_errors_italian.txt,  M content/vrmonitor/translations/vrmonitor_errors_korean.txt,  M content/vrmonitor/translations/vrmonitor_errors_koreana.txt,  M content/vrmonitor/translations/vrmonitor_errors_latam.txt,  M content/vrmonitor/translations/vrmonitor_errors_spanish.txt,  M content/vrmonitor/translations/vrmonitor_errors_tha
https://steamdb.info/patchnotes/4310177/

--- a/content/panorama/localization/tenfoot_finnish.txt
+++ b/content/panorama/localization/tenfoot_finnish.txt
@@ -612,7 +612,7 @@
 "[english]BackgroundImageReload_CameraHeight"	"Camera Height"
 "NightModeCheck"	"Yötila"
 "[english]NightModeCheck"	"Night Mode"
-"NightModeDesc"	"Yötila himmentää visiirin kello 5:00 saakka (tai kunnes SteamVR on käynnistetty uudelleen)."
+"NightModeDesc"	"Yötila himmentää VR-lasit kello 5.00 saakka (tai kunnes SteamVR on käynnistetty uudelleen)."
 "[english]NightModeDesc"	"Night Mode dims the headset until 5:00 AM (or until SteamVR is restarted)."
 "Transition_Progress_Description"	"ODOTETAAN..."
 "[english]Transition_Progress_Description"	"WAITING FOR..."
@@ -620,7 +620,7 @@
 "[english]Now_Waiting"	"WAITING..."
 "HomeAppCheck"	"SteamVR Home"
 "[english]HomeAppCheck"	"SteamVR Home"
-"HomeAppDesc"	"Uudet SteamVR-ympäristöt tukevat muokautettuvia kotiympäristöjä, yhteisöominaisuuksia ja paljon muuta. Osallistu testaukseen ja anna palautetta SteamVR-foorumeilla."
+"HomeAppDesc"	"SteamVR Home -ympäristöt erilaisia kotiympäristöjä, sosiaalisia toimintoja ja paljon muuta."
 "[english]HomeAppDesc"	"SteamVR Home experience supports richer home spaces, social features, and more."
 "MutedLabel"	"Mykistetty"
 "[english]MutedLabel"	"Muted"
@@ -668,6 +668,6 @@
 "[english]Panorama_Selection_Vietnamese"	"Tiếng Việt (Vietnamese)"
 "BindingCallout_Header"	"NÄYTÄ TOIMINNOT"
 "[english]BindingCallout_Header"	"SHOW CONTROLS"
-"App_Not_Responding"	"Sovellus ei vastaa..."
+"App_Not_Responding"	"Odotetaan sovelluksen vastausta"
 "[english]App_Not_Responding"	"Waiting for application to respond"
 }
