--- a/content/panorama/localization/tenfoot_russian.txt
+++ b/content/panorama/localization/tenfoot_russian.txt
@@ -443,9 +443,9 @@
 "[english]PowerMenuResetSeatedPosition"	"Reset Seated Position"
 "PowerMenuTurnOffController"	"Выключить контроллер"
 "[english]PowerMenuTurnOffController"	"Turn Off Controller"
-"PowerMenuQuitSceneApp"	"Выход из {s:current_app_name}"
+"PowerMenuQuitSceneApp"	"Выйти из {s:current_app_name}"
 "[english]PowerMenuQuitSceneApp"	"Exit {s:current_app_name}"
-"PowerMenuExitVR"	"Выход из ВР"
+"PowerMenuExitVR"	"Выйти из VR"
 "[english]PowerMenuExitVR"	"Exit VR"
 "PowerMenuCancel"	"Отмена"
 "[english]PowerMenuCancel"	"Cancel"
@@ -595,7 +595,7 @@
 "[english]SettingsTime_30m"	"after 30 minutes of idle time"
 "SettingsTime_1h"	"через 1 час бездействия"
 "[english]SettingsTime_1h"	"after 1 hour of idle time"
-"Now_Playing_HomeApp"	"В ГЛАВНОМ МЕНЮ"
+"Now_Playing_HomeApp"	"ДОМАШНИЙ МИР"
 "[english]Now_Playing_HomeApp"	"HOME"
 "Now_Starting_HomeApp"	"ВОЗВРАЩЕНИЕ НА"
 "[english]Now_Starting_HomeApp"	"GOING HOME TO"
@@ -627,7 +627,7 @@
 "[english]MutedLabel"	"Muted"
 "BackToApp"	"В ПРИЛОЖЕНИЕ"
 "[english]BackToApp"	"BACK TO APP"
-"GoHome"	"НА ГЛАВНУЮ"
+"GoHome"	"ДОМОЙ"
 "[english]GoHome"	"GO HOME"
 "QuitApp"	"ВЫЙТИ"
 "[english]QuitApp"	"QUIT APP"
