--- a/content/vrmonitor/translations/vrmonitor_bulgarian.txt
+++ b/content/vrmonitor/translations/vrmonitor_bulgarian.txt
@@ -1111,10 +1111,10 @@
 "[english]Settings_Audio_Header"	"Audio Settings"
 "Settings_Audio_On"	"Когато се използва SteamVR…"
 "[english]Settings_Audio_On"	"When using SteamVR..."
-"Settings_Audio_AudioPlay"	"Задаване на възпроизвеждащото у-во към"
-"[english]Settings_Audio_AudioPlay"	"Set Playback device to"
-"Settings_Audio_AudioRecord"	"Задаване на записващото у-во към"
-"[english]Settings_Audio_AudioRecord"	"Set Record device to"
+"Settings_Audio_AudioPlay"	"У-во за извеждане на аудио"
+"[english]Settings_Audio_AudioPlay"	"Audio output device"
+"Settings_Audio_AudioRecord"	"У-во за въвеждане на аудио"
+"[english]Settings_Audio_AudioRecord"	"Audio input device"
 "Settings_Audio_Off"	"Когато не се използва SteamVR…"
 "[english]Settings_Audio_Off"	"When not use SteamVR..."
 "Settings_Audio_HDMIGain"	"Включване на намаляването за подсилвания звук от VIVE HDMI"
@@ -2570,5 +2570,21 @@
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_USBConnected"	"An unexpected USB connection to the Base Station is preventing the wireless update.<br><br><font color=#aaaa00>Please unplug the USB cable that is plugged into the Base Station.</font>"
 "FirmwareWizard_Failure_WirelessUpdateBaseStuckInDFU"	"Неочаквана USB връзка към базовата станция възпрепятства финиширането на безжичното обновление.<ul><li><font color=#aaaa00>Разкачете захранващия кабел на базовата станция;<li>Разкачете USB кабела, който е включен в базовата станция;<li>Включете повторно само захранващия кабел на базовата станция;<li>Изчакайте 30 секунди, така че базовата станция да финишира вътрешното обновление.</font></ul><br>Възможно е светодиодът на базовата станция да е изключен по време на вътрешното обновление.<br>Не разкачвайте захранването и не правете никакви други връзки към базовата станция по време на обновлението ѝ."
 "[english]FirmwareWizard_Failure_WirelessUpdateBaseStuckInDFU"	"An unexpected USB connection to the Base Station is preventing the wireless update from finishing.<ul><li><font color=#aaaa00>Unplug the Base Station's power cable.<li>Unplug the USB cable that is plugged into the Base Station.<li>Replug only the Base Station's power cable.<li>Wait 30 seconds for the Base Station to finish its internal update.</font></ul><br>The Base Station LED may be off during its internal update.<br>Do not unplug or make any other connections to the Base Station during its update."
+"Settings_Audio_Device_HMD"	"ВР шлем"
+"[english]Settings_Audio_Device_HMD"	"VR Headset"
+"Settings_Audio_Device_Other"	"Друго"
+"[english]Settings_Audio_Device_Other"	"Other"
+"Settings_Audio_Default"	"По подразбиране"
+"[english]Settings_Audio_Default"	"Default"
+"Settings_Audio_AudioMirrorEnable"	"Включване на аудио отразяване"
+"[english]Settings_Audio_AudioMirrorEnable"	"Enable audio mirror"
+"FirmwareWizard_UpdateBasestationWireless_Fail_BaseStuckInDFU"	"Неочаквана USB връзка към базовата станция възпрепятства финиширането на безжичното обновление.<ul><li><font color=#aaaa00>Разкачете захранващия кабел на базовата станция;<li>Разкачете USB кабела, който е включен в базовата станция;<li>Включете повторно само захранващия кабел на базовата станция;<li>Изчакайте 30 секунди, така че базовата станция да финишира вътрешното обновление.</font></ul><br>Възможно е светодиодът на базовата станция да е изключен по време на вътрешното обновление.<br>Не разкачвайте захранването и не правете никакви други връзки към базовата станция по време на обновлението ѝ."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_BaseStuckInDFU"	"An unexpected USB connection to the Base Station is preventing the wireless update from finishing.<ul><li><font color=#aaaa00>Unplug the Base Station's power cable.<li>Unplug the USB cable that is plugged into the Base Station.<li>Replug only the Base Station's power cable.<li>Wait 30 seconds for the Base Station to finish its internal update.</font></ul><br>The Base Station LED may be off during its internal update.<br>Do not unplug or make any other connections to the Base Station during its update."
+"FirmwareWizard_UpdateBasestationWireless_Fail_BaseNeedsPowerCycle"	"Нужно е тази базова станция да бъде с превключено захранване, така че обновяването да продължи.<br><br><font color=#aaaa00>Моля, изключете, а след това включете захранващия кабел на базовата станция, преди да продължите.</font>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_BaseNeedsPowerCycle"	"This Base Station needs to be power cycled to continue the update.<br><br><font color=#aaaa00>Please unplug and then replug the Base Station's power cable before continuing.</font>"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox_BS20"	"Ако обновяването на това устройство продължава да е неуспешно, без да има напредък…<ul><li>Излезте от SteamVR;<li>Изключете всякакви USB кабели, свързани към базовата станция;<li>НЕ включвайте никакви USB кабели към базовата станция;<li>Изключете и включете захранващия кабел на свързочната кутия;<li>Изключете и включете захранващия кабел на базовата станция;<li>Пуснете SteamVR и опитайте отново.</ul>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox_BS20"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug any USB cable connected to the Base Station.<li>Do NOT connect USB to the Base Station.<li>Unplug and replug the Link Box power cable.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR and try again.</ul>"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_BS20"	"Ако обновяването на това устройство продължава да е неуспешно, без да има напредък…<ul><li>Излезте от SteamVR;<li>Изключете всякакви USB кабели, свързани към базовата станция;<li>НЕ включвайте никакви USB кабели към базовата станция;<li>Изключете и включете захранващия кабел на базовата станция;<li>Пуснете SteamVR и опитайте отново.</ul>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_BS20"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug any USB cable connected to the Base Station.<li>Do NOT connect USB to the Base Station.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR and try again.</ul>"
 }
 }
