--- a/content/vrmonitor/translations/vrmonitor_czech.txt
+++ b/content/vrmonitor/translations/vrmonitor_czech.txt
@@ -400,9 +400,9 @@
 "[english]Main_JumplistEntry_Quit"	"Quit"
 "Main_RuntimeFailed_Message"	"Nepodařilo se spustit runtime.\n\n%1\n\nMomentálně nastavený runtime založený\n%2\nna spustitelném souboru režimu SteamVR však můžete resetovat\n%3\n"
 "[english]Main_RuntimeFailed_Message"	"The runtime was not able to start.\n\n%1\n\nYou can reset the current set runtime\n%2\nbased on the executable path of SteamVR\n%3\n"
-"VRManifest_Imported_Title"	"Import souboru „manifest“ rozhrani OpenVR"
+"VRManifest_Imported_Title"	"Import záznamového souboru rozhraní OpenVR"
 "[english]VRManifest_Imported_Title"	"OpenVR Manifest file imported"
-"VRManifest_Imported_Message"	"Soubor „manifest“ rozhraní OpenVR byl importován: \n %1"
+"VRManifest_Imported_Message"	"Záznamový soubor rozhraní OpenVR byl importován: \n %1"
 "[english]VRManifest_Imported_Message"	"OpenVR Manifest file imported: \n  %1"
 "MenuAction_Compositor_ShowMirror"	"Povolit VR pohled"
 "[english]MenuAction_Compositor_ShowMirror"	"Show VR View"
@@ -1125,10 +1125,10 @@
 "[english]Settings_Audio_Header"	"Audio Settings"
 "Settings_Audio_On"	"Při používání režimu SteamVR..."
 "[english]Settings_Audio_On"	"When using SteamVR..."
-"Settings_Audio_AudioPlay"	"Nastavit přehrávací zařízení na"
-"[english]Settings_Audio_AudioPlay"	"Set Playback device to"
-"Settings_Audio_AudioRecord"	"Nastavit nahrávací zařízení na"
-"[english]Settings_Audio_AudioRecord"	"Set Record device to"
+"Settings_Audio_AudioPlay"	"Výstupní zvukové zařízení"
+"[english]Settings_Audio_AudioPlay"	"Audio output device"
+"Settings_Audio_AudioRecord"	"Vstupní zvukové zařízení"
+"[english]Settings_Audio_AudioRecord"	"Audio input device"
 "Settings_Audio_Off"	"Po ukončení režimu SteamVR..."
 "[english]Settings_Audio_Off"	"When not use SteamVR..."
 "Settings_Audio_HDMIGain"	"Povolit redukci signálu na HTC VIVE – HDMI audio"
@@ -2368,7 +2368,7 @@
 "[english]VRApplicationError_None"	"No Error"
 "VRApplicationError_AppKeyAlreadyExists"	"Aplikace už je zaregistrována"
 "[english]VRApplicationError_AppKeyAlreadyExists"	"Application is already registered"
-"VRApplicationError_NoManifest"	"Chybí manifest aplikace"
+"VRApplicationError_NoManifest"	"Chybí záznam aplikace"
 "[english]VRApplicationError_NoManifest"	"No application Manifest"
 "VRApplicationError_NoApplication"	"Aplikace nebyla nalezena"
 "[english]VRApplicationError_NoApplication"	"No application"
@@ -2380,7 +2380,7 @@
 "[english]VRApplicationError_IPCFailed"	"Unable to request application"
 "VRApplicationError_ApplicationAlreadyRunning"	"Aplikace je již spuštěna"
 "[english]VRApplicationError_ApplicationAlreadyRunning"	"Application is already running"
-"VRApplicationError_InvalidManifest"	"Neplatný manifest"
+"VRApplicationError_InvalidManifest"	"Neplatný záznam"
 "[english]VRApplicationError_InvalidManifest"	"Invalid Manifest"
 "VRApplicationError_InvalidApplication"	"Neplatná aplikace"
 "[english]VRApplicationError_InvalidApplication"	"Application was invalid"
@@ -2580,5 +2580,31 @@
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_USBConnected"	"An unexpected USB connection to the Base Station is preventing the wireless update.<br><br><font color=#aaaa00>Please unplug the USB cable that is plugged into the Base Station.</font>"
 "FirmwareWizard_Failure_WirelessUpdateBaseStuckInDFU"	"Dokončení bezdrátové aktualizace brání neočekávané USB spojení základní stanice.<ul><li><font color=#aaaa00>Odpojte základní stanici od zdroje.<li>Odpojte USB kabel zapojený do základní stanice.<li>Opětovně připojte základní stanici ke zdroji.<li>Vyčkejte 30 sekund, dokud základní stanice nedokončí svoji interní aktualizaci.</font></ul><br>LED kontrolka základní stanice nemusí během interní aktualizace svítit.<br>V průběhu aktualizace stanici neodpojujte ani k ní nepřipojujte žádná další zařízení."
 "[english]FirmwareWizard_Failure_WirelessUpdateBaseStuckInDFU"	"An unexpected USB connection to the Base Station is preventing the wireless update from finishing.<ul><li><font color=#aaaa00>Unplug the Base Station's power cable.<li>Unplug the USB cable that is plugged into the Base Station.<li>Replug only the Base Station's power cable.<li>Wait 30 seconds for the Base Station to finish its internal update.</font></ul><br>The Base Station LED may be off during its internal update.<br>Do not unplug or make any other connections to the Base Station during its update."
+"Settings_Audio_Device_HMD"	"VR headset"
+"[english]Settings_Audio_Device_HMD"	"VR Headset"
+"Settings_Audio_Device_Other"	"Jiné"
+"[english]Settings_Audio_Device_Other"	"Other"
+"Settings_Audio_Default"	"Výchozí"
+"[english]Settings_Audio_Default"	"Default"
+"Settings_Audio_AudioMirrorEnable"	"Povolit zrcadlení zvuku"
+"[english]Settings_Audio_AudioMirrorEnable"	"Enable audio mirror"
+"FirmwareWizard_UpdateBasestationWireless_Fail_BaseStuckInDFU"	"Dokončení bezdrátové aktualizace brání neočekávané USB spojení základní stanice.<ul><li><font color=#aaaa00>Odpojte základní stanici od zdroje.<li>Odpojte USB kabel zapojený do základní stanice.<li>Opětovně připojte základní stanici ke zdroji.<li>Vyčkejte 30 sekund, dokud základní stanice nedokončí svoji interní aktualizaci.</font></ul><br>LED kontrolka základní stanice nemusí během interní aktualizace svítit.<br>V průběhu aktualizace stanici neodpojujte ani k ní nepřipojujte žádná další zařízení."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_BaseStuckInDFU"	"An unexpected USB connection to the Base Station is preventing the wireless update from finishing.<ul><li><font color=#aaaa00>Unplug the Base Station's power cable.<li>Unplug the USB cable that is plugged into the Base Station.<li>Replug only the Base Station's power cable.<li>Wait 30 seconds for the Base Station to finish its internal update.</font></ul><br>The Base Station LED may be off during its internal update.<br>Do not unplug or make any other connections to the Base Station during its update."
+"FirmwareWizard_UpdateBasestationWireless_Fail_BaseNeedsPowerCycle"	"Tuto základní stanici je nutné vypnout a zapnout, aby mohla pokračovat v aktualizaci.<br><br><font color=#aaaa00>Odpojte proto stanici od zdroje a opětovně ji připojte.</font>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_BaseNeedsPowerCycle"	"This Base Station needs to be power cycled to continue the update.<br><br><font color=#aaaa00>Please unplug and then replug the Base Station's power cable before continuing.</font>"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox_BS20"	"Pokud se aktualizace nezdaří několikrát za sebou...<ul><li>Ukončete režim SteamVR.<li>Odpojte všechny USB kabely zapojené do základní stanice.<li>USB kabely znovu NEZAPOJUJTE.<li>Odpojte a znovu zapojte napájecí kabely pro Link Box.<li>Odpojte a znovu zapojte napájecí kabel základní stanice.<li>Znovu spusťte režim SteamVR a opakujte aktualizaci.</ul>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox_BS20"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug any USB cable connected to the Base Station.<li>Do NOT connect USB to the Base Station.<li>Unplug and replug the Link Box power cable.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR and try again.</ul>"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_BS20"	"Pokud se aktualizace nezdaří několikrát za sebou...<ul><li>Ukončete režim SteamVR.<li>Odpojte všechny USB kabely zapojené do základní stanice.<li>USB kabely znovu NEZAPOJUJTE.<li>Odpojte a znovu zapojte napájecí kabel základní stanice.<li>Znovu spusťte režim SteamVR a opakujte aktualizaci.</ul>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_BS20"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug any USB cable connected to the Base Station.<li>Do NOT connect USB to the Base Station.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR and try again.</ul>"
+"BS_PromotePowerManagement_Title"	"SteamVR"
+"[english]BS_PromotePowerManagement_Title"	"SteamVR"
+"BS_PromotePowerManagement_Explanation"	"Režim SteamVR umí nově řídit napájení základních stanic.<br><br>Pokud není režim SteamVR používán, stanice s řízeným napájením se automaticky přepnou do režimu standby a probudí se až při používání režimu SteamVR.<br>"
+"[english]BS_PromotePowerManagement_Explanation"	"SteamVR can power manage your Base Stations.<br><br>Power managed Base Stations go into standby mode when SteamVR is not in use and wake up again when SteamVR starts.<br>"
+"BS_PromotePowerManagement_Enable"	"Povolit řízení napájení základní stanice*"
+"[english]BS_PromotePowerManagement_Enable"	"Enable Base Station Power Management *"
+"BS_PromotePowerManagement_Explanation2"	"<br><font color=#ffffff>* NENÍ DOPORUČENO pro sdílené prostory s více uživateli režimu SteamVR.</font>"
+"[english]BS_PromotePowerManagement_Explanation2"	"<br><font color=#ffffff>* NOT RECOMMENDED for shared tracking spaces with multiple SteamVR users.</font>"
+"BS_PromotePowerManagement_ExitNow"	"Ukončit nyní (%1)"
+"[english]BS_PromotePowerManagement_ExitNow"	"Exit Now (%1)"
 }
 }
