--- a/content/vrmonitor/translations/vrmonitor_dutch.txt
+++ b/content/vrmonitor/translations/vrmonitor_dutch.txt
@@ -309,7 +309,7 @@
 "[english]Settings_MediumSpace"	"Medium Space"
 "Settings_LargeSpace"	"Grote ruimte"
 "[english]Settings_LargeSpace"	"Large Space"
-"Settings_RemoveAllUSBDevices"	"USB-apparaten verwijderen"
+"Settings_RemoveAllUSBDevices"	"SteamVR-USB-apparaten verwijderen"
 "[english]Settings_RemoveAllUSBDevices"	"Remove all SteamVR USB devices"
 "Settings_ResetChaperoneToDK2Default"	"Chaperone-gegevens naar standaardwaarden voor Oculus Rift DK2 terugzetten"
 "[english]Settings_ResetChaperoneToDK2Default"	"Reset Chaperone Data to Oculus Rift DK2 Default"
@@ -642,7 +642,7 @@
 "[english]PairingWizard_Success_NoMoreDonglesAvailable_Content"	"Your controller is paired and ready."
 "FirmwareWizard_StartQuestion_TextContent"	"Een tekst die aangeeft wat er gaat gebeuren."
 "[english]FirmwareWizard_StartQuestion_TextContent"	"Some text content describing what is going to happen."
-"MenuAction_RunTutorial"	"Training starten"
+"MenuAction_RunTutorial"	"Introductie"
 "[english]MenuAction_RunTutorial"	"Tutorial"
 "PairingWizard_CheckForDongles_Content"	"Controleren op beschikbare draadloze ontvangers..."
 "[english]PairingWizard_CheckForDongles_Content"	"Check for available wireless receivers..."
@@ -671,7 +671,7 @@
 "[english]Settings_StatusWindowAlwaysOnTop_Info"	" "
 "Settings_StatusWindowAlwaysOnTop_Text"	"Altijd op voorgrond weergeven"
 "[english]Settings_StatusWindowAlwaysOnTop_Text"	"Display always on top"
-"Main_JumplistEntry_RunTutorial"	"Training starten"
+"Main_JumplistEntry_RunTutorial"	"Introductie"
 "[english]Main_JumplistEntry_RunTutorial"	"Tutorial"
 "FirmwareWizard_Shutdown_Title"	"Apparaat bijwerken"
 "[english]FirmwareWizard_Shutdown_Title"	"Update Device"
@@ -1120,10 +1120,10 @@
 "[english]Settings_Audio_Header"	"Audio Settings"
 "Settings_Audio_On"	"Wanneer SteamVR wordt gebruikt..."
 "[english]Settings_Audio_On"	"When using SteamVR..."
-"Settings_Audio_AudioPlay"	"Als afspeelapparaat instellen"
-"[english]Settings_Audio_AudioPlay"	"Set Playback device to"
-"Settings_Audio_AudioRecord"	"Als opname-apparaat instellen"
-"[english]Settings_Audio_AudioRecord"	"Set Record device to"
+"Settings_Audio_AudioPlay"	"Uitvoerapparaat audio"
+"[english]Settings_Audio_AudioPlay"	"Audio output device"
+"Settings_Audio_AudioRecord"	"Invoerapparaat audio"
+"[english]Settings_Audio_AudioRecord"	"Audio input device"
 "Settings_Audio_Off"	"Wanneer SteamVR niet wordt gebruikt..."
 "[english]Settings_Audio_Off"	"When not use SteamVR..."
 "Settings_Audio_HDMIGain"	"Gainvermindering inschakelen op VIVE HDMI-audio"
@@ -1584,7 +1584,7 @@
 "[english]Settings_DefaultScreenshotType_Mono"	"Normal"
 "Settings_DefaultScreenshotType_Stereo"	"Stereoscopisch"
 "[english]Settings_DefaultScreenshotType_Stereo"	"Stereoscopic"
-"Settings_DefaultScreenshotType_Cubemap"	"Kubusmap"
+"Settings_DefaultScreenshotType_Cubemap"	"Cubemap"
 "[english]Settings_DefaultScreenshotType_Cubemap"	"Cubemap"
 "Settings_DefaultScreenshotType_MonoPanorama"	"Enkelzijdig breedbeeld"
 "[english]Settings_DefaultScreenshotType_MonoPanorama"	"Mono Panorama"
@@ -1776,6 +1776,10 @@
 "[english]PlaylistPlayer_ProcessError_Unknown"	""
 "PlaylistPlayer_StatusOfCurrentDemo_Text"	"Status van huidige demo: %1 %2"
 "[english]PlaylistPlayer_StatusOfCurrentDemo_Text"	"Status of current demo: %1 %2"
+"PlaylistPlayer_PrerollState_Text"	"Pre-roll "
+"[english]PlaylistPlayer_PrerollState_Text"	"Preroll "
+"PlaylistPlayer_PostrollState_Text"	"Post-roll "
+"[english]PlaylistPlayer_PostrollState_Text"	"Postroll "
 "PlaylistPlayer_StatusOfCurrentEntryPause_Text"	"%1Status van huidige vermelding: Gepauzeerd"
 "[english]PlaylistPlayer_StatusOfCurrentEntryPause_Text"	"%1Status of current entry: Pause"
 "PlaylistPlayer_StatusOfCurrentEntryNone_Text"	"Geen statusinformatie voor huidige vermelding."
@@ -1874,11 +1878,11 @@
 "[english]FirmwareWizard_UpdateGenericTracker_Success_LowerText"	" "
 "VRInitError_Driver_HmdUnknown_Description"	"Het specifieke serienummer van de headset in de instellingen kan niet worden gevonden."
 "[english]VRInitError_Driver_HmdUnknown_Description"	"The specific headset serial number named in the settings cannot be found."
-"Settings_Advanced_Supersampling_Header"	"Applicatieresolutie"
+"Settings_Advanced_Supersampling_Header"	"Toepassingsresolutie"
 "[english]Settings_Advanced_Supersampling_Header"	"Application Resolution"
 "Settings_Advanced_Supersampling_RequiresRestart"	"SteamVR dient opnieuw gestart te worden om deze wijziging door te voeren."
 "[english]Settings_Advanced_Supersampling_RequiresRestart"	"This change requires a restart of SteamVR to take effect."
-"Explanation_Supersampling"	"* Sommige applicaties moeten mogelijk worden herstart om de wijzigingen toe te passen."
+"Explanation_Supersampling"	"* Sommige toepassingen moeten mogelijk worden herstart om de wijzigingen toe te passen."
 "[english]Explanation_Supersampling"	"*Some applications may need to be restarted for settings to take effect."
 "MenuAction_Workshop_RunTools"	"Een omgeving maken/aanpassen"
 "[english]MenuAction_Workshop_RunTools"	"Create/Modify an Environment"
@@ -2234,6 +2238,8 @@
 "[english]MenuAction_WebConsole"	"Web Console"
 "MenuAction_OverlayViewer"	"Overlayweergave"
 "[english]MenuAction_OverlayViewer"	"Overlay Viewer"
+"MenuAction_WebDevToolsPlaceholder"	"Geen instanties gevonden"
+"[english]MenuAction_WebDevToolsPlaceholder"	"No Instances Found"
 "MessageBox_OpenWirelessSettings"	"Bluetooth-instellingen"
 "[english]MessageBox_OpenWirelessSettings"	"Bluetooth Settings"
 "FirmwareWizard_DeviceOverview_FailedToUpdate"	"Bijwerken mislukt"
@@ -2334,9 +2340,9 @@
 "[english]VRApplicationError_None"	"No Error"
 "VRApplicationError_AppKeyAlreadyExists"	"Toepassing is al geregistreerd"
 "[english]VRApplicationError_AppKeyAlreadyExists"	"Application is already registered"
-"VRApplicationError_NoManifest"	"Geen applicatiemanifest"
+"VRApplicationError_NoManifest"	"Geen toepassingsmanifest"
 "[english]VRApplicationError_NoManifest"	"No application Manifest"
-"VRApplicationError_NoApplication"	"Geen applicatie"
+"VRApplicationError_NoApplication"	"Geen toepassing"
 "[english]VRApplicationError_NoApplication"	"No application"
 "VRApplicationError_InvalidIndex"	"Ongeldige index"
 "[english]VRApplicationError_InvalidIndex"	"Invalid Index"
@@ -2536,5 +2542,15 @@
 "[english]Settings_PerApplication_Reprojection_Checkbox"	"Use legacy reprojection mode"
 "Settings_PerApplication_Reprojection_Description"	"Als je deze optie aanvinkt, wordt asynchrone herprojectie voor deze titel uitgeschakeld."
 "[english]Settings_PerApplication_Reprojection_Description"	"Checking this option will disable asynchronous reprojection for this title."
+"Settings_Audio_Device_HMD"	"VR-headset"
+"[english]Settings_Audio_Device_HMD"	"VR Headset"
+"Settings_Audio_Device_Other"	"Overig"
+"[english]Settings_Audio_Device_Other"	"Other"
+"Settings_Audio_Default"	"Standaard"
+"[english]Settings_Audio_Default"	"Default"
+"Settings_Audio_AudioMirrorEnable"	"Audiospiegeling inschakelen"
+"[english]Settings_Audio_AudioMirrorEnable"	"Enable audio mirror"
+"BS_PromotePowerManagement_Title"	"SteamVR"
+"[english]BS_PromotePowerManagement_Title"	"SteamVR"
 }
 }
