--- a/content/vrmonitor/translations/vrmonitor_errors_italian.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_italian.txt
@@ -407,7 +407,7 @@
 "[english]ChaperoneCalibrationState_Warning_BaseStationRemoved_Action"	"Perform Room Setup"
 "ChaperoneCalibrationState_Warning_SeatedBoundsInvalid_Header"	"Configurazione della stanza"
 "[english]ChaperoneCalibrationState_Warning_SeatedBoundsInvalid_Header"	"Room Setup"
-"ChaperoneCalibrationState_Warning_SeatedBoundsInvalid_Description"	"Esegui la configurazione della stanza per definire la tua posizione da seduto."
+"ChaperoneCalibrationState_Warning_SeatedBoundsInvalid_Description"	"Esegui la configurazione della stanza per definire la tua posizione seduta."
 "[english]ChaperoneCalibrationState_Warning_SeatedBoundsInvalid_Description"	"Please perform Room Setup to define your seated position."
 "ChaperoneCalibrationState_Warning_SeatedBoundsInvalid_Action"	"Esegui configurazione della stanza"
 "[english]ChaperoneCalibrationState_Warning_SeatedBoundsInvalid_Action"	"Perform Room Setup"
@@ -441,7 +441,7 @@
 "[english]ChaperoneCalibrationState_Error_CollisionBoundsInvalid_Description"	"Please perform Room Setup to redefine your play area and chaperone bounds."
 "ChaperoneCalibrationState_Error_CollisionBoundsInvalid_Action"	"Esegui configurazione della stanza"
 "[english]ChaperoneCalibrationState_Error_CollisionBoundsInvalid_Action"	"Perform Room Setup"
-"Lighthouse_UnknownEvent_Header"	"Errore della stazione di base"
+"Lighthouse_UnknownEvent_Header"	"Errore stazione di base"
 "[english]Lighthouse_UnknownEvent_Header"	"Base Station Error"
 "Lighthouse_UnknownEvent_Description"	"Si è verificato un problema con SteamVR Tracking. Visita la pagina dell'assistenza di SteamVR per ulteriori informazioni."
 "[english]Lighthouse_UnknownEvent_Description"	"Something is wrong with SteamVR Tracking. Please visit SteamVR Support for more info."
@@ -449,7 +449,7 @@
 "[english]Lighthouse_UnknownEvent_Action"	"More info"
 "Lighthouse_BasestationFactoryError_Header"	"Errore della stazione di base"
 "[english]Lighthouse_BasestationFactoryError_Header"	"Base Station Error"
-"Lighthouse_BasestationFactoryError_Description"	"Questa stazione di base presenta un errore di fabbricazione. Contatta il produttore per ricevere una stazione di base sostitutiva."
+"Lighthouse_BasestationFactoryError_Description"	"Questa stazione di base presenta un errore di fabbricazione, contatta il produttore per ricevere una stazione di base sostitutiva."
 "[english]Lighthouse_BasestationFactoryError_Description"	"This base station has a manufacturing error. Please contact the manufacturer for a replacement base station."
 "Lighthouse_BasestationFactoryError_Action"	" "
 "[english]Lighthouse_BasestationFactoryError_Action"	" "
@@ -459,7 +459,7 @@
 "[english]Lighthouse_Disambiguator_TooManyBasestations_Description"	"Please make sure only two base stations are visible to your headset and controllers."
 "Lighthouse_Disambiguator_TooManyBasestations_Action"	"Riprova"
 "[english]Lighthouse_Disambiguator_TooManyBasestations_Action"	"Try again"
-"Lighthouse_Disambiguator_TdmConfigurationError_Header"	"Errore della stazione di base"
+"Lighthouse_Disambiguator_TdmConfigurationError_Header"	"Errore stazione di base"
 "[english]Lighthouse_Disambiguator_TdmConfigurationError_Header"	"Base Station Error"
 "Lighthouse_Disambiguator_TdmConfigurationError_Description"	"Le tue stazioni di base non si stanno sincronizzando, assicurati di averle configurate correttamente."
 "[english]Lighthouse_Disambiguator_TdmConfigurationError_Description"	"Your base stations are not syncing, please make sure they are set up properly."
@@ -561,7 +561,7 @@
 "[english]Popover_ConnectionRefusedBySteam_Description"	"SteamVR has encountered an error connecting to Steam. Please restart Steam and try again."
 "Popover_DirectModeDriverUpdate_Header"	"Aggiorna i driver video"
 "[english]Popover_DirectModeDriverUpdate_Header"	"Update Graphics Drivers"
-"Popover_DirectModeDriverUpdate_Description"	"Aggiorna i tuoi driver video per abilitare la modalità di visualizzazione diretta. È installata la versione %1, ma la modalità di visualizzazione diretta richiede la versione %2"
+"Popover_DirectModeDriverUpdate_Description"	"Per abilitare la modalità di visualizzazione diretta, aggiorna i tuoi driver video. È installata la versione %1, ma la modalità di visualizzazione diretta richiede la versione %2"
 "[english]Popover_DirectModeDriverUpdate_Description"	"To enable Direct Display Mode, please update your video drivers. Version %1 is installed, but Direct Display Mode requires version %2"
 "Popover_DirectModeDriverUpdate_Action"	"Scarica i driver"
 "[english]Popover_DirectModeDriverUpdate_Action"	"Download Drivers"
@@ -577,7 +577,7 @@
 "[english]Warning_DismissableWarning_BasestationsTooFarApart_Header"	"VR setup notice"
 "Warning_DismissableWarning_BasestationsTooFarApart_Description"	"Le stazioni di base sono più distanti del valore consigliato. Per un'esperienza ottimale, ti suggeriamo di riposizionarle in modo tale che non si trovino a più di 5,5 metri di distanza."
 "[english]Warning_DismissableWarning_BasestationsTooFarApart_Description"	"Your base stations are farther apart than recommended. For the best experience, consider repositioning them so they're no more than 5.5 meters (18 feet) apart. "
-"Warning_DismissableWarning_OpticalBasestationSyncWarning_Header"	"Errore della stazione di base"
+"Warning_DismissableWarning_OpticalBasestationSyncWarning_Header"	"Errore stazione di base"
 "[english]Warning_DismissableWarning_OpticalBasestationSyncWarning_Header"	"Base Station Error"
 "Warning_DismissableWarning_OpticalBasestationSyncWarning_Description"	"È possibile che qualcosa stia bloccando il campo visivo delle stazioni di base. Se questo avviso si ripete frequentemente, prova a utilizzare la sincronizzazione via cavo."
 "[english]Warning_DismissableWarning_OpticalBasestationSyncWarning_Description"	"There may be something blocking line of sight between your base stations. If this warning persists between sessions you might consider switching to cabled sync."
@@ -627,7 +627,7 @@
 "[english]Warning_DismissableWarning_BluetoothLinkFailedInstallation_Description"	"Bluetooth Link needs to be installed to enable Link Box communication. Restart SteamVR and try again."
 "Warning_DismissableWarning_BluetoothLinkFailedInstallation_Action"	"Riprova"
 "[english]Warning_DismissableWarning_BluetoothLinkFailedInstallation_Action"	"Retry"
-"Lighthouse_Disambiguator_TdmMasterBaseInSlaveMode_Header"	"Errore della stazione di base"
+"Lighthouse_Disambiguator_TdmMasterBaseInSlaveMode_Header"	"Errore stazione di base"
 "[english]Lighthouse_Disambiguator_TdmMasterBaseInSlaveMode_Header"	"Base Station Error"
 "Lighthouse_Disambiguator_TdmMasterBaseInSlaveMode_Description"	"Le stazioni di base sono in modalità \"A\" e \"c\". Cambia la modalità da \"A\" a \"b\" per la sincronizzazione ottica."
 "[english]Lighthouse_Disambiguator_TdmMasterBaseInSlaveMode_Description"	"Your base stations are in modes 'A' and 'c'.  Switch 'A' base to mode 'b' for optical sync."
@@ -1061,7 +1061,7 @@
 "Lighthouse_BasestationFactoryError_ActionURL"	"
 "
 "[english]Lighthouse_BasestationFactoryError_ActionURL"	" "
-"Lighthouse_BasestationInternalFault_01_Header"	"Errore della stazione di base"
+"Lighthouse_BasestationInternalFault_01_Header"	"Errore stazione di base"
 "[english]Lighthouse_BasestationInternalFault_01_Header"	"Base Station Error"
 "Lighthouse_BasestationInternalFault_01_Description"	"Una delle tue stazioni di base ha riscontrato un problema interno. Scollega e ricollega la stazione di base con la spia rossa intermittente. Se il problema persiste, contatta il produttore per chiedere assistenza."
 "[english]Lighthouse_BasestationInternalFault_01_Description"	"One of your base stations has developed an internal problem. Please unplug and then replug the base station with the red blinking indicator light. If the condition persists, please contact the manufacturer for assistance."
@@ -1071,7 +1071,7 @@
 "Lighthouse_BasestationInternalFault_01_ActionURL"	"
 "
 "[english]Lighthouse_BasestationInternalFault_01_ActionURL"	" "
-"Lighthouse_BasestationInternalFault_02_Header"	"Errore della stazione di base"
+"Lighthouse_BasestationInternalFault_02_Header"	"Errore stazione di base"
 "[english]Lighthouse_BasestationInternalFault_02_Header"	"Base Station Error"
 "Lighthouse_BasestationInternalFault_02_Description"	"Una stazione di base ha riscontrato un problema interno. Scollega e ricollega la stazione di base con la spia rossa intermittente. Se il problema persiste, contatta il produttore per chiedere assistenza."
 "[english]Lighthouse_BasestationInternalFault_02_Description"	"A base station has developed an internal problem. Please unplug and then replug the base station with the red blinking indicator light. If the condition persists, please contact the manufacturer for assistance."
@@ -1081,7 +1081,7 @@
 "Lighthouse_BasestationInternalFault_02_ActionURL"	"
 "
 "[english]Lighthouse_BasestationInternalFault_02_ActionURL"	" "
-"Lighthouse_BasestationInternalFault_03_Header"	"Errore della stazione di base"
+"Lighthouse_BasestationInternalFault_03_Header"	"Errore stazione di base"
 "[english]Lighthouse_BasestationInternalFault_03_Header"	"Base Station Error"
 "Lighthouse_BasestationInternalFault_03_Description"	"Una stazione di base ha riscontrato un problema interno. Scollega e ricollega la stazione di base con la spia rossa intermittente. Se il problema persiste, contatta il produttore per chiedere assistenza."
 "[english]Lighthouse_BasestationInternalFault_03_Description"	"A base station has developed an internal problem. Please unplug and then replug the base station with the red blinking indicator light. If the condition persists, please contact the manufacturer for assistance."
@@ -1091,7 +1091,7 @@
 "Lighthouse_BasestationInternalFault_03_ActionURL"	"
 "
 "[english]Lighthouse_BasestationInternalFault_03_ActionURL"	" "
-"Lighthouse_BasestationInternalFault_04_Header"	"Errore della stazione di base"
+"Lighthouse_BasestationInternalFault_04_Header"	"Errore stazione di base"
 "[english]Lighthouse_BasestationInternalFault_04_Header"	"Base Station Error"
 "Lighthouse_BasestationInternalFault_04_Description"	"Una stazione di base ha riscontrato un problema interno. Scollega e ricollega la stazione di base con la spia rossa intermittente. Se il problema persiste, contatta il produttore per chiedere assistenza."
 "[english]Lighthouse_BasestationInternalFault_04_Description"	"A base station has developed an internal problem. Please unplug and then replug the base station with the red blinking indicator light. If the condition persists, please contact the manufacturer for assistance."
@@ -1101,7 +1101,7 @@
 "Lighthouse_BasestationInternalFault_04_ActionURL"	"
 "
 "[english]Lighthouse_BasestationInternalFault_04_ActionURL"	" "
-"Lighthouse_BasestationInternalFault_05_Header"	"Errore della stazione di base"
+"Lighthouse_BasestationInternalFault_05_Header"	"Errore stazione di base"
 "[english]Lighthouse_BasestationInternalFault_05_Header"	"Base Station Error"
 "Lighthouse_BasestationInternalFault_05_Description"	"Una stazione di base ha riscontrato un problema interno (fault 05). Scollega e ricollega la stazione di base con la spia rossa intermittente. Se il problema persiste, contatta il produttore per chiedere assistenza."
 "[english]Lighthouse_BasestationInternalFault_05_Description"	"A base station has developed an internal problem (fault 05). Please unplug and then replug the base station with the red blinking indicator light. If the condition persists, please contact the manufacturer for assistance."
