--- a/content/vrmonitor/translations/vrmonitor_errors_latam.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_latam.txt
@@ -581,7 +581,7 @@
 "[english]Warning_DismissableWarning_OpticalBasestationSyncWarning_Header"	"Base Station Error"
 "Warning_DismissableWarning_OpticalBasestationSyncWarning_Description"	"Puede que haya algo bloqueando la línea de visión entre las estaciones base. Si esta advertencia se repite a través de las sesiones, deberías considerar la posibilidad de cambiar a sincronización por cable."
 "[english]Warning_DismissableWarning_OpticalBasestationSyncWarning_Description"	"There may be something blocking line of sight between your base stations. If this warning persists between sessions you might consider switching to cabled sync."
-"Warning_DismissableWarning_BasestationSingleBaseModeHint_Header"	"Sólo se detecta una estación base"
+"Warning_DismissableWarning_BasestationSingleBaseModeHint_Header"	"Solo se detecta una estación base"
 "[english]Warning_DismissableWarning_BasestationSingleBaseModeHint_Header"	"Only one base station detected"
 "Warning_DismissableWarning_BasestationSingleBaseModeHint_Description"	"Si utilizas una sola estación base, la calidad del seguimiento mejorará si la cambias al modo A."
 "[english]Warning_DismissableWarning_BasestationSingleBaseModeHint_Description"	"If you are only using one base station, tracking quality will improve if you switch this base station to mode A."
@@ -1179,12 +1179,22 @@
 "[english]Warning_DismissableWarning_Windows8_Action"	"More info"
 "Warning_DismissableWarning_Windows8_ActionURL"	"https://help.steampowered.com/es-419/wizard/HelpWithGame/?appid=250820"
 "[english]Warning_DismissableWarning_Windows8_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
+"Warning_DismissableWarning_HeadsetTetherDisconnected_Header"	"Cable desconectado del visor"
+"[english]Warning_DismissableWarning_HeadsetTetherDisconnected_Header"	"Tether Disconnected at Headset"
+"Warning_DismissableWarning_HeadsetTetherDisconnected_Description"	"Se ha desconectado el cable de tu visor. Asegúrate de que el enganche detrás de la junta frontal esté firmemente abrochado."
+"[english]Warning_DismissableWarning_HeadsetTetherDisconnected_Description"	"Your headset's cable has become disconnected at the headset. Please ensure the connection behind the face gasket is firmly seated."
 "Warning_DismissableWarning_HeadsetTetherDisconnected_Action"	"Más información"
 "[english]Warning_DismissableWarning_HeadsetTetherDisconnected_Action"	"More info"
+"Warning_DismissableWarning_HeadsetTetherDisconnected_ActionURL"	"https://help.steampowered.com/es/wizard/HelpWithGame/?appid=250820"
+"[english]Warning_DismissableWarning_HeadsetTetherDisconnected_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
 "Warning_DismissableWarning_OutOfVideoMemory_Header"	"Sin memoria de video"
 "[english]Warning_DismissableWarning_OutOfVideoMemory_Header"	"Out Of Video Memory"
+"Warning_DismissableWarning_OutOfVideoMemory_Description"	"Tu sistema se está quedando sin memoria de video, lo que puede causar que baje el rendimiento. Prueba a salir de la aplicación actual o reiniciar SteamVR."
+"[english]Warning_DismissableWarning_OutOfVideoMemory_Description"	"Your system is running low on video memory which will cause poor performance. Try exiting the current application, or restarting SteamVR."
 "Warning_DismissableWarning_OutOfVideoMemory_Action"	"Más información"
 "[english]Warning_DismissableWarning_OutOfVideoMemory_Action"	"More info"
+"Warning_DismissableWarning_OutOfVideoMemory_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
+"[english]Warning_DismissableWarning_OutOfVideoMemory_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGame/?appid=250820"
 "VRInitError_Driver_HmdDisplayNotFoundLaptop_Header"	"Portátil: Pantalla del visor desconectada"
 "[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_Header"	"Laptop: Headset Display Disconnected"
 "VRInitError_Driver_HmdDisplayNotFoundLaptop_Description"	"Asegúrate de que los cables de video están bien conectados a tu portátil. Los portátiles pueden requerir una configuración especial para funcionar con la realidad virtual."
@@ -1195,6 +1205,8 @@
 "[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_FirstActionURL"	"vrmonitor://reboothmd"
 "VRInitError_Driver_HmdDisplayNotFoundLaptop_Action"	"Más información"
 "[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_Action"	"More info"
+"VRInitError_Driver_HmdDisplayNotFoundLaptop_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=39&return_nodeid=71"
+"[english]VRInitError_Driver_HmdDisplayNotFoundLaptop_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374&nodeid=39&return_nodeid=71"
 "VRInitError_VendorSpecific_OculusRuntimeBadInstall_Header"	"Error de SteamVR"
 "[english]VRInitError_VendorSpecific_OculusRuntimeBadInstall_Header"	"SteamVR Error"
 "VRInitError_VendorSpecific_OculusRuntimeBadInstall_Description"	"Hay un problema con la instalación en tiempo de ejecución de Oculus. Reinicia y verifica que el software de Oculus esté instalado y actualizado."
@@ -1221,25 +1233,39 @@
 "[english]VRInitError_IPC_ConnectFailedAfterTargetExited_Description"	"A key component of SteamVR isn't working properly. Please restart SteamVR."
 "VRInitError_IPC_ConnectFailedAfterTargetExited_Action"	"Más información"
 "[english]VRInitError_IPC_ConnectFailedAfterTargetExited_Action"	"More info"
+"VRInitError_IPC_ConnectFailedAfterTargetExited_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374"
+"[english]VRInitError_IPC_ConnectFailedAfterTargetExited_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374"
 "VRInitError_IPC_NamespaceUnavailable_Header"	"Error de SteamVR"
 "[english]VRInitError_IPC_NamespaceUnavailable_Header"	"SteamVR Fail"
 "VRInitError_IPC_NamespaceUnavailable_Description"	"Un componente clave de SteamVR no funciona correctamente. Reinicia SteamVR."
 "[english]VRInitError_IPC_NamespaceUnavailable_Description"	"A key component of SteamVR isn't working properly. Please restart SteamVR."
 "VRInitError_IPC_NamespaceUnavailable_Action"	"Más información"
 "[english]VRInitError_IPC_NamespaceUnavailable_Action"	"More info"
+"VRInitError_IPC_NamespaceUnavailable_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374"
+"[english]VRInitError_IPC_NamespaceUnavailable_ActionURL"	"https://help.steampowered.com/en/wizard/HelpWithGameIssue/?appid=250820&issueid=374"
+"Warning_DismissableWarning_BaseStationUpdateFailedToComplete_Header"	"La actualización del dispositivo no se ha completado"
+"[english]Warning_DismissableWarning_BaseStationUpdateFailedToComplete_Header"	"Incomplete Device Update"
+"Warning_DismissableWarning_BaseStationUpdateFailedToComplete_Description"	"Una actualización de la estación base se ha interrumpido o no se ha podido completar. Haz clic en \"Recuperación\" para iniciar el procedimiento."
+"[english]Warning_DismissableWarning_BaseStationUpdateFailedToComplete_Description"	"A Base Station update was interrupted or failed to complete. Please click 'Recovery' to begin the procedure."
 "Warning_DismissableWarning_BaseStationUpdateFailedToComplete_Action"	"Recuperación"
 "[english]Warning_DismissableWarning_BaseStationUpdateFailedToComplete_Action"	"Recovery"
 "Warning_DismissableWarning_BaseStationUpdateFailedToComplete_ActionURL"	"vrmonitor://open/settings/basestation/recovery"
 "[english]Warning_DismissableWarning_BaseStationUpdateFailedToComplete_ActionURL"	"vrmonitor://open/settings/basestation/recovery"
+"VRInitError_Compositor_FailedToCreateDirectModeDisplay_Header"	"Problema de conexión de pantalla"
+"[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_Header"	"Display Connection Trouble"
+"VRInitError_Compositor_FailedToCreateDirectModeDisplay_Description"	"Tu tarjeta gráfica no puede conectarse con éxito a la pantalla de tu visor. Intenta quitar cualquier adaptador de cable o extensor que estés utilizando. Prueba con otro puerto en su GPU si hay uno disponible. <b>Utiliza el enlace de reinicio a continuación para reiniciar el visor y que la GPU lo intente nuevamente.</b>"
+"[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_Description"	"Your graphics card cannot successfully connect to your HMD display. Try removing any cable adapters or extenders you are using. Try another port on your GPU if one is available. <b>Use the reset link below to reset the HMD so the GPU will try again.</b>"
 "VRInitError_Compositor_FailedToCreateDirectModeDisplay_FirstAction"	"Reiniciar visor"
 "[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_FirstAction"	"Reset Headset"
 "VRInitError_Compositor_FailedToCreateDirectModeDisplay_FirstActionURL"	"vrmonitor://reboothmd"
 "[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_FirstActionURL"	"vrmonitor://reboothmd"
 "VRInitError_Compositor_FailedToCreateDirectModeDisplay_Action"	"Más información"
 "[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_Action"	"More info"
+"VRInitError_Compositor_FailedToCreateDirectModeDisplay_ActionURL"	"https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237"
+"[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_ActionURL"	"https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237"
 "Warning_DismissableWarning_DevelopmentHardwareNotSupported_Header"	"El dispositivo ya no es compatible"
 "[english]Warning_DismissableWarning_DevelopmentHardwareNotSupported_Header"	"Device No Longer Supported"
-"Warning_DismissableWarning_DevelopmentHardwareNotSupported_Description"	"Tu %1 (%2) es una herramienta de desarrollo en preproducción y ya no es compatible.<br><br><font color=#ff0000>Su funcionamiento puede ser inesperado. Reemplázala inmediatamente.</font>"
+"Warning_DismissableWarning_DevelopmentHardwareNotSupported_Description"	"<font color=#aaaa00>Tu %1 de preproducción ya no es compatible.</font> <br><br> Este dispositivo ya no recibirá actualizaciones de firmware, y se prevé una disminución de su funcionalidad. Por favor, sustitúyelo tan pronto como te sea posible.<br><br>(Id. de hardware: %2)"
 "[english]Warning_DismissableWarning_DevelopmentHardwareNotSupported_Description"	"<font color=#aaaa00>Your pre-production %1 is no longer supported.</font> <br><br> This device will no longer receive firmware updates, and diminished functionality is expected. Please replace at your earliest convenience. <br><br>(hwid: %2)"
 }
 }
