--- a/content/vrmonitor/translations/vrmonitor_errors_ukrainian.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_ukrainian.txt
@@ -51,7 +51,7 @@
 "[english]Error_VRServerNotRunning_Description"	"Oh no! SteamVR has encountered an unexpected problem."
 "Error_VRServerNotRunning_Action"	"Перезапустити SteamVR"
 "[english]Error_VRServerNotRunning_Action"	"Restart SteamVR"
-"Error_TrackingDevice_NotValid_Header"	"Пристрій не під’єднано"
+"Error_TrackingDevice_NotValid_Header"	"Пристрій не підключено"
 "[english]Error_TrackingDevice_NotValid_Header"	"Device Not Connected"
 "Error_TrackingDevice_NotValid_Description"	"Переконайтеся, що він увімкнений, та спробуйте ще."
 "[english]Error_TrackingDevice_NotValid_Description"	"Make sure it is turned on and try again."
@@ -470,7 +470,7 @@
 "[english]Popover_Off_Invalid_Header"	"Device not connected"
 "Popover_Off_HMD_Header"	"Шолом не виявлено"
 "[english]Popover_Off_HMD_Header"	"Headset not detected"
-"Popover_Off_HMD_Description"	"Переконайтеся, що він під’єднаний правильно."
+"Popover_Off_HMD_Description"	"Переконайтеся, що він підключений правильно."
 "[english]Popover_Off_HMD_Description"	"Make sure it is connected properly."
 "Popover_Off_HMD_Action"	"Докладніше"
 "[english]Popover_Off_HMD_Action"	"More info"
@@ -743,7 +743,7 @@
 "[english]VRInitError_Init_HmdNotFoundPresenceFailed_FirstAction"	"Reset Headset"
 "VRInitError_Init_HmdNotFoundPresenceFailed_Action"	"Докладніше"
 "[english]VRInitError_Init_HmdNotFoundPresenceFailed_Action"	"More info"
-"VRInitError_Driver_HmdDisplayNotFoundAfterFix_Header"	"Шолом під’єднано неправильно"
+"VRInitError_Driver_HmdDisplayNotFoundAfterFix_Header"	"Шолом підключено неправильно"
 "[english]VRInitError_Driver_HmdDisplayNotFoundAfterFix_Header"	"Headset not connected properly"
 "VRInitError_Driver_HmdDisplayNotFoundAfterFix_Description"	"Дисплей шолома не знайдено. Будь ласка, переконайтеся, що кабелі HDMI під’єднані надійно, потім перезапустіть шолом натисканням нижче."
 "[english]VRInitError_Driver_HmdDisplayNotFoundAfterFix_Description"	"The headset's display was not found, please make sure your HDMI cables are securely connected, then reboot it by clicking below."
