--- a/content/vrmonitor/translations/vrmonitor_french.txt
+++ b/content/vrmonitor/translations/vrmonitor_french.txt
@@ -1115,10 +1115,10 @@
 "[english]Settings_Audio_Header"	"Audio Settings"
 "Settings_Audio_On"	"Lorsque SteamVR est actif..."
 "[english]Settings_Audio_On"	"When using SteamVR..."
-"Settings_Audio_AudioPlay"	"Utiliser le périphérique de lecture :"
-"[english]Settings_Audio_AudioPlay"	"Set Playback device to"
-"Settings_Audio_AudioRecord"	"Utiliser le périphérique d'enregistrement :"
-"[english]Settings_Audio_AudioRecord"	"Set Record device to"
+"Settings_Audio_AudioPlay"	"Périphérique de sortie audio"
+"[english]Settings_Audio_AudioPlay"	"Audio output device"
+"Settings_Audio_AudioRecord"	"Périphérique d'entrée audio"
+"[english]Settings_Audio_AudioRecord"	"Audio input device"
 "Settings_Audio_Off"	"Lorsque SteamVR n'est pas utilisé..."
 "[english]Settings_Audio_Off"	"When not use SteamVR..."
 "Settings_Audio_HDMIGain"	"Activer la réduction de gain sur la sortie audio HDMI du VIVE"
@@ -2211,7 +2211,7 @@
 "[english]MonitorController_EnableSafeMode_Text"	"<span>Safe Mode</span> can be used to limit SteamVR processes to the essentials when compatibility issues occur.<p>Are you sure you want to enable Safe Mode? SteamVR will restart after this change is made.<p><a style ='color: rgb(212, 212, 212);' href='https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326'>Learn more</a>."
 "MonitorController_DisableSafeMode_Text"	"<span>SteamVR</span> fonctionne actuellement en mode sans échec.<p>Voulez-vous vraiment désactiver ce mode ? Tous les pilotes seront activés, ce qui peut provoquer des problèmes de compatibilité, et SteamVR redémarrera.<p><a style ='color: rgb(212, 212, 212);' href='https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326'>En savoir plus</a>."
 "[english]MonitorController_DisableSafeMode_Text"	"<span>SteamVR</span> is currently operating in Safe Mode.<p>Are you sure you want to disable Safe Mode? This will enable all device drivers and may result in compatability issues. This will also restart SteamVR.<p><a style ='color: rgb(212, 212, 212);' href='https://support.steampowered.com/kb_article.php?ref=8566-SDZC-9326'>Learn more</a>."
-"Settings_PerApplication_MotionSmoothing_Checkbox_AlwaysOn"	"Forcer l'activation permanente (AVERTISSEMENT : l'application tournera à une fréquence d'images réduite de moitié)"
+"Settings_PerApplication_MotionSmoothing_Checkbox_AlwaysOn"	"Toujours utiliser (⚠ fréquence d'images de l'appli réduite de moitié ⚠)"
 "[english]Settings_PerApplication_MotionSmoothing_Checkbox_AlwaysOn"	"Force always-on (WARNING: Application will run at half framerate)"
 "MenuAction_RestartSteamVR"	"Redémarrer SteamVR"
 "[english]MenuAction_RestartSteamVR"	"Restart SteamVR"
@@ -2425,7 +2425,7 @@
 "[english]MenuAction_DebugCommands"	"Debug Commands"
 "FirmwareWizard_ProgressPercentFinishing"	"[ Finalisation... ]"
 "[english]FirmwareWizard_ProgressPercentFinishing"	"[ Finishing... ]"
-"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox"	"Si la mise à jour de l'appareil continue d'échouer... <ul><li>Quittez SteamVR.<li>Débranchez puis rebranchez tous les câbles d'alimentation du boîtier d'interconnexion.<li>Débranchez puis rebranchez tous les câbles d'alimentation de la station de base.<li>Relancez ensuite SteamVR et réessayez.</ul>"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox"	"Si la mise à jour de l'appareil continue d'échouer... <ul><li>Quittez SteamVR.<li>Débranchez puis rebranchez le câble d'alimentation du boîtier d'interconnexion.<li>Débranchez puis rebranchez le câble d'alimentation de la station de base.<li>Relancez ensuite SteamVR et réessayez.</ul>"
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug and replug the Link Box power cable.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR, and try again.</ul>"
 "FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS10"	"La mise à jour de la station de base est terminée. Pour qu'elle soit prise en compte, vous devrez peut-être débrancher puis rebrancher le câble d'alimentation de votre station de base."
 "[english]FirmwareWizard_UpdateBasestationWireless_Success_MiddleText_BS10"	"Base Station successfully updated. You may need to unplug and then replug your base station's power cable for it to register as updated."
@@ -2565,5 +2565,31 @@
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_USBConnected"	"An unexpected USB connection to the Base Station is preventing the wireless update.<br><br><font color=#aaaa00>Please unplug the USB cable that is plugged into the Base Station.</font>"
 "FirmwareWizard_Failure_WirelessUpdateBaseStuckInDFU"	"Une connexion USB inattendue à la station de base empêche la mise à jour sans fil de s'achever.<ul><li><font color=#aaaa00>Débranchez le câble d'alimentation de la station de base.<li>Débranchez le câble USB branché à la station de base.<li>Rebranchez seulement le câble d'alimentation de la station de base.<li>Attendez 30 secondes que la station de base ait terminé sa mise à jour interne.</font></ul><br>Le voyant de la station de base peut être éteint pendant sa mise à jour interne.<br>Pendant la mise à jour, ne branchez aucun câble à la station de base, et n'en débranchez aucun."
 "[english]FirmwareWizard_Failure_WirelessUpdateBaseStuckInDFU"	"An unexpected USB connection to the Base Station is preventing the wireless update from finishing.<ul><li><font color=#aaaa00>Unplug the Base Station's power cable.<li>Unplug the USB cable that is plugged into the Base Station.<li>Replug only the Base Station's power cable.<li>Wait 30 seconds for the Base Station to finish its internal update.</font></ul><br>The Base Station LED may be off during its internal update.<br>Do not unplug or make any other connections to the Base Station during its update."
+"Settings_Audio_Device_HMD"	"Casque de VR"
+"[english]Settings_Audio_Device_HMD"	"VR Headset"
+"Settings_Audio_Device_Other"	"Autre"
+"[english]Settings_Audio_Device_Other"	"Other"
+"Settings_Audio_Default"	"Par défaut"
+"[english]Settings_Audio_Default"	"Default"
+"Settings_Audio_AudioMirrorEnable"	"Dupliquer l'audio"
+"[english]Settings_Audio_AudioMirrorEnable"	"Enable audio mirror"
+"FirmwareWizard_UpdateBasestationWireless_Fail_BaseStuckInDFU"	"Une connexion USB inattendue à la station de base empêche la mise à jour sans fil de s'achever.<ul><li><font color=#aaaa00>Débranchez le câble d'alimentation de la station de base.<li>Débranchez le câble USB branché à la station de base.<li>Rebranchez seulement le câble d'alimentation de la station de base.<li>Attendez 30 secondes que la station de base ait terminé sa mise à jour interne.</font></ul><br>Le voyant de la station de base peut être éteint pendant sa mise à jour interne.<br>Pendant la mise à jour, ne branchez aucun câble à la station de base, et n'en débranchez aucun."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_BaseStuckInDFU"	"An unexpected USB connection to the Base Station is preventing the wireless update from finishing.<ul><li><font color=#aaaa00>Unplug the Base Station's power cable.<li>Unplug the USB cable that is plugged into the Base Station.<li>Replug only the Base Station's power cable.<li>Wait 30 seconds for the Base Station to finish its internal update.</font></ul><br>The Base Station LED may be off during its internal update.<br>Do not unplug or make any other connections to the Base Station during its update."
+"FirmwareWizard_UpdateBasestationWireless_Fail_BaseNeedsPowerCycle"	"Pour continuer la mise à jour, veuillez débrancher et rebrancher la station de base.<br><br><font color=#aaaa00>Veuillez débrancher puis rebrancher le câble d'alimentation de la station de base avant de continuer.</font>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_BaseNeedsPowerCycle"	"This Base Station needs to be power cycled to continue the update.<br><br><font color=#aaaa00>Please unplug and then replug the Base Station's power cable before continuing.</font>"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox_BS20"	"Si la mise à jour de l'appareil continue d'échouer... <ul><li>Quittez SteamVR.<li>Débranchez tous les câbles USB connectés à la station de base.<li>NE CONNECTEZ PAS l'USB à la station de base.<li>Débranchez puis rebranchez le câble d'alimentation du boîtier d'interconnexion.<li>Débranchez puis rebranchez le câble d'alimentation de la station de base.<li>Relancez ensuite SteamVR et réessayez.</ul>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox_BS20"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug any USB cable connected to the Base Station.<li>Do NOT connect USB to the Base Station.<li>Unplug and replug the Link Box power cable.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR and try again.</ul>"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_BS20"	"Si la mise à jour de l'appareil continue d'échouer... <ul><li>Quittez SteamVR.<li>Débranchez tous les câbles USB connectés à la station de base.<li>NE CONNECTEZ PAS de câble USB à la station de base.<li>Débranchez puis rebranchez le câble d'alimentation de la station de base.<li>Relancez ensuite SteamVR et réessayez.</ul>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_BS20"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug any USB cable connected to the Base Station.<li>Do NOT connect USB to the Base Station.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR and try again.</ul>"
+"BS_PromotePowerManagement_Title"	"SteamVR"
+"[english]BS_PromotePowerManagement_Title"	"SteamVR"
+"BS_PromotePowerManagement_Explanation"	"SteamVR peut gérer l'alimentation vos stations de base.<br><br>Les stations de base à gestion d'alimentation se mettent en veille lorsque SteamVR n'est pas utilisé et sont réactivées au démarrage de SteamVR.<br>"
+"[english]BS_PromotePowerManagement_Explanation"	"SteamVR can power manage your Base Stations.<br><br>Power managed Base Stations go into standby mode when SteamVR is not in use and wake up again when SteamVR starts.<br>"
+"BS_PromotePowerManagement_Enable"	"Activer la gestion de l'alimentation pour les stations de base *"
+"[english]BS_PromotePowerManagement_Enable"	"Enable Base Station Power Management *"
+"BS_PromotePowerManagement_Explanation2"	"<br><font color=#ffffff>* NON RECOMMANDÉ pour les espaces de suivi partagés par plusieurs utilisateurs de SteamVR.</font>"
+"[english]BS_PromotePowerManagement_Explanation2"	"<br><font color=#ffffff>* NOT RECOMMENDED for shared tracking spaces with multiple SteamVR users.</font>"
+"BS_PromotePowerManagement_ExitNow"	"Quitter maintenant (%1)"
+"[english]BS_PromotePowerManagement_ExitNow"	"Exit Now (%1)"
 }
 }
