--- a/content/vrmonitor/translations/vrmonitor_german.txt
+++ b/content/vrmonitor/translations/vrmonitor_german.txt
@@ -1122,10 +1122,10 @@
 "[english]Settings_Audio_Header"	"Audio Settings"
 "Settings_Audio_On"	"Wenn SteamVR verwendet wird..."
 "[english]Settings_Audio_On"	"When using SteamVR..."
-"Settings_Audio_AudioPlay"	"Wiedergabegerät einstellen als"
-"[english]Settings_Audio_AudioPlay"	"Set Playback device to"
-"Settings_Audio_AudioRecord"	"Aufnahmegerät einstellen als"
-"[english]Settings_Audio_AudioRecord"	"Set Record device to"
+"Settings_Audio_AudioPlay"	"Audioausgabegerät"
+"[english]Settings_Audio_AudioPlay"	"Audio output device"
+"Settings_Audio_AudioRecord"	"Audioeingabegerät"
+"[english]Settings_Audio_AudioRecord"	"Audio input device"
 "Settings_Audio_Off"	"Wenn SteamVR nicht verwendet wird..."
 "[english]Settings_Audio_Off"	"When not use SteamVR..."
 "Settings_Audio_HDMIGain"	"Verstärkungsreduzierung für VIVE HDMI-Audio aktivieren"
@@ -2575,5 +2575,41 @@
 "[english]HeadsetView_DebugCommands"	"Open Debug Commands"
 "HeadsetView_HideButtonLabel"	"VR-Ansicht ausblenden"
 "[english]HeadsetView_HideButtonLabel"	"Hide VR View"
+"Settings_PerApplication_Reprojection_Header"	"Bewegungsglättung"
+"[english]Settings_PerApplication_Reprojection_Header"	"Reprojection"
+"Settings_PerApplication_Reprojection_Checkbox"	"Klassischen Bewegungsglättungsmodus verwenden"
+"[english]Settings_PerApplication_Reprojection_Checkbox"	"Use legacy reprojection mode"
+"Settings_PerApplication_Reprojection_Description"	"Durch Markieren dieser Option wird Bewegungsglättung für diesen Titel deaktiviert."
+"[english]Settings_PerApplication_Reprojection_Description"	"Checking this option will disable asynchronous reprojection for this title."
+"FirmwareWizard_UpdateBasestationWireless_Fail_USBConnected"	"Eine unerwartete USB-Verbindung zur Basisstation verhindert das drahtlose Update.<br><br><font color=#aaaa00>Bitte entfernen Sie das mit der Basisstation verbundene USB-Kabel.</font>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_USBConnected"	"An unexpected USB connection to the Base Station is preventing the wireless update.<br><br><font color=#aaaa00>Please unplug the USB cable that is plugged into the Base Station.</font>"
+"FirmwareWizard_Failure_WirelessUpdateBaseStuckInDFU"	"Eine unerwartete USB-Verbindung zur Basisstation verhindert den erfolgreichen Abschluss des drahtlosen Updates.<ul><li><font color=#aaaa00>Trennen Sie das Stromkabel der Basisstation von der Steckdose.<li>Entfernen Sie das mit der Basisstation verbundene USB-Kabel.<li>Schließen Sie die Basisstation wieder an den Strom an.<li>Warten Sie 30 Sekunden bis die Basisstation ihr internes Update beendet hat.</font></ul><br>Das LED der Basisstation ist während des internen Updates möglicherweise ausgeschaltet. <br>Entfernen Sie während des Updates der Basistation keine Komponenten und versuchen sie nicht, andere Komponenten zu verbinden."
+"[english]FirmwareWizard_Failure_WirelessUpdateBaseStuckInDFU"	"An unexpected USB connection to the Base Station is preventing the wireless update from finishing.<ul><li><font color=#aaaa00>Unplug the Base Station's power cable.<li>Unplug the USB cable that is plugged into the Base Station.<li>Replug only the Base Station's power cable.<li>Wait 30 seconds for the Base Station to finish its internal update.</font></ul><br>The Base Station LED may be off during its internal update.<br>Do not unplug or make any other connections to the Base Station during its update."
+"Settings_Audio_Device_HMD"	"VR-Headset"
+"[english]Settings_Audio_Device_HMD"	"VR Headset"
+"Settings_Audio_Device_Other"	"Sonstiges"
+"[english]Settings_Audio_Device_Other"	"Other"
+"Settings_Audio_Default"	"Standard"
+"[english]Settings_Audio_Default"	"Default"
+"Settings_Audio_AudioMirrorEnable"	"Tonspiegelung aktivieren"
+"[english]Settings_Audio_AudioMirrorEnable"	"Enable audio mirror"
+"FirmwareWizard_UpdateBasestationWireless_Fail_BaseStuckInDFU"	"Eine unerwartete USB-Verbindung zur Basisstation verhindert den erfolgreichen Abschluss des drahtlosen Updates.<ul><li><font color=#aaaa00>Trennen Sie das Stromkabel der Basisstation von der Steckdose.<li>Entfernen Sie das mit der Basisstation verbundene USB-Kabel.<li>Schließen Sie die Basisstation wieder an den Strom an.<li>Warten Sie 30 Sekunden bis die Basisstation ihr internes Update beendet hat.</font></ul><br>Das LED der Basisstation ist während des internen Updates möglicherweise ausgeschaltet. <br>Entfernen Sie während des Updates der Basistation keine Komponenten und versuchen sie nicht, andere Komponenten zu verbinden."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_BaseStuckInDFU"	"An unexpected USB connection to the Base Station is preventing the wireless update from finishing.<ul><li><font color=#aaaa00>Unplug the Base Station's power cable.<li>Unplug the USB cable that is plugged into the Base Station.<li>Replug only the Base Station's power cable.<li>Wait 30 seconds for the Base Station to finish its internal update.</font></ul><br>The Base Station LED may be off during its internal update.<br>Do not unplug or make any other connections to the Base Station during its update."
+"FirmwareWizard_UpdateBasestationWireless_Fail_BaseNeedsPowerCycle"	"Diese Basisstation muss kurzfristig von der Stromzufuhr getrennt und dann wieder angeschlossen werden, um mit dem Update fortfahren zu können.<br><br><font color=#aaaa00>Bitte entfernen Sie das Stromkabel der Basisstation und schließen Sie diese wieder an, um fortzufahren.</font>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_BaseNeedsPowerCycle"	"This Base Station needs to be power cycled to continue the update.<br><br><font color=#aaaa00>Please unplug and then replug the Base Station's power cable before continuing.</font>"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox_BS20"	"Führen Sie folgende Schritte durch, wenn das Update bei diesem Gerät weiterhin ohne Fortschritt fehlschlägt: <ul><li>Beenden Sie SteamVR.<li>Trennen Sie alle mit der Basisstation verbundenen USB-Kabel.<li>Schließen Sie KEIN USB-Kabel an die Basisstation an.<li>Trennen Sie das Stromkabel der Verbindungsbox und schließen Sie es wieder an.<li>Trennen Sie das Stromkabel der Basisstation und schließen Sie es wieder an.<li>Starten Sie SteamVR und versuchen Sie erneut das Update durchzuführen.</ul>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox_BS20"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug any USB cable connected to the Base Station.<li>Do NOT connect USB to the Base Station.<li>Unplug and replug the Link Box power cable.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR and try again.</ul>"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_BS20"	"Führen Sie folgende Schritte durch, wenn das Update bei diesem Gerät weiterhin ohne Fortschritt fehlschlägt:<ul><li>Beenden Sie SteamVR.<li>Trennen Sie alle mit der Basisstation verbundenen USB-Kabel.<li>Schließen Sie KEIN USB-Kabel an die Basisstation an.<li>Trennen Sie das Stromkabel der Basisstation und schließen Sie es wieder an.<li>Starten Sie SteamVR und versuchen Sie erneut das Update durchzuführen.</ul>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_BS20"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug any USB cable connected to the Base Station.<li>Do NOT connect USB to the Base Station.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR and try again.</ul>"
+"BS_PromotePowerManagement_Title"	"SteamVR"
+"[english]BS_PromotePowerManagement_Title"	"SteamVR"
+"BS_PromotePowerManagement_Explanation"	"SteamVR kann die Energieverwaltung Ihrer Basisstationen übernehmen.<br><br>Dadurch wechseln die Basisstationen in den Standby-Modus, wenn SteamVR nicht aktiv verwendet wird, und wachen wieder auf, sobald die Anwendung gestartet wird.<br>"
+"[english]BS_PromotePowerManagement_Explanation"	"SteamVR can power manage your Base Stations.<br><br>Power managed Base Stations go into standby mode when SteamVR is not in use and wake up again when SteamVR starts.<br>"
+"BS_PromotePowerManagement_Enable"	"Energieverwaltung für Basisstationen aktivieren *"
+"[english]BS_PromotePowerManagement_Enable"	"Enable Base Station Power Management *"
+"BS_PromotePowerManagement_Explanation2"	"<br><font color=#ffffff>* NICHT EMPFOHLEN, wenn Sie den erfassten Bereich mit mehreren SteamVR-Nutzern teilen.</font>"
+"[english]BS_PromotePowerManagement_Explanation2"	"<br><font color=#ffffff>* NOT RECOMMENDED for shared tracking spaces with multiple SteamVR users.</font>"
+"BS_PromotePowerManagement_ExitNow"	"Jetzt beenden (%1)"
+"[english]BS_PromotePowerManagement_ExitNow"	"Exit Now (%1)"
 }
 }
