--- a/content/vrmonitor/translations/vrmonitor_greek.txt
+++ b/content/vrmonitor/translations/vrmonitor_greek.txt
@@ -1116,9 +1116,9 @@
 "Settings_Audio_On"	"Όταν χρησιμοποιείτε SteamVR..."
 "[english]Settings_Audio_On"	"When using SteamVR..."
 "Settings_Audio_AudioPlay"	"Ορισμός συσκευής αναπαραγωγής σε"
-"[english]Settings_Audio_AudioPlay"	"Set Playback device to"
+"[english]Settings_Audio_AudioPlay"	"Audio output device"
 "Settings_Audio_AudioRecord"	"Ορισμός συσκευής ηχογράφησης σε"
-"[english]Settings_Audio_AudioRecord"	"Set Record device to"
+"[english]Settings_Audio_AudioRecord"	"Audio input device"
 "Settings_Audio_Off"	"Όταν δεν χρησιμοποιείτε SteamVR..."
 "[english]Settings_Audio_Off"	"When not use SteamVR..."
 "Settings_Audio_HDMIGain"	"Ενεργοποίηση μείωσης κέρδους στον ήχο VIVE HDMI"
