--- a/content/vrmonitor/translations/vrmonitor_italian.txt
+++ b/content/vrmonitor/translations/vrmonitor_italian.txt
@@ -1115,10 +1115,10 @@
 "[english]Settings_Audio_Header"	"Audio Settings"
 "Settings_Audio_On"	"Quando SteamVR è in uso..."
 "[english]Settings_Audio_On"	"When using SteamVR..."
-"Settings_Audio_AudioPlay"	"Imposta dispositivo di playback su"
-"[english]Settings_Audio_AudioPlay"	"Set Playback device to"
-"Settings_Audio_AudioRecord"	"Imposta dispositivo di registrazione su"
-"[english]Settings_Audio_AudioRecord"	"Set Record device to"
+"Settings_Audio_AudioPlay"	"Dispositivo di output audio"
+"[english]Settings_Audio_AudioPlay"	"Audio output device"
+"Settings_Audio_AudioRecord"	"Dispositivo di input audio"
+"[english]Settings_Audio_AudioRecord"	"Audio input device"
 "Settings_Audio_Off"	"Quando SteamVR non è in uso..."
 "[english]Settings_Audio_Off"	"When not use SteamVR..."
 "Settings_Audio_HDMIGain"	"Abilita la riduzione del guadagno sull'audio HDMI VIVE"
@@ -2565,5 +2565,31 @@
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_USBConnected"	"An unexpected USB connection to the Base Station is preventing the wireless update.<br><br><font color=#aaaa00>Please unplug the USB cable that is plugged into the Base Station.</font>"
 "FirmwareWizard_Failure_WirelessUpdateBaseStuckInDFU"	"Un collegamento USB inatteso alla stazione di base sta impedendo il completamento dell'aggiornamento wireless.<ul><li><font color=#aaaa00>Scollega il cavo di alimentazione della stazione di base.<li>Disconnetti il cavo USB inserito nella stazione di base.<li>Ricollega solo il cavo di alimentazione della stazione di base.<li>Attendi 30 secondi per il completamento dell'aggiornamento interno della stazione di base.</font></ul><br>Il LED della stazione di base potrebbe essere spento durante l'aggiornamento interno.<br>Non scollegare o collegare altri dispositivi alla stazione di base durante l'aggiornamento."
 "[english]FirmwareWizard_Failure_WirelessUpdateBaseStuckInDFU"	"An unexpected USB connection to the Base Station is preventing the wireless update from finishing.<ul><li><font color=#aaaa00>Unplug the Base Station's power cable.<li>Unplug the USB cable that is plugged into the Base Station.<li>Replug only the Base Station's power cable.<li>Wait 30 seconds for the Base Station to finish its internal update.</font></ul><br>The Base Station LED may be off during its internal update.<br>Do not unplug or make any other connections to the Base Station during its update."
+"Settings_Audio_Device_HMD"	"Visore VR"
+"[english]Settings_Audio_Device_HMD"	"VR Headset"
+"Settings_Audio_Device_Other"	"Altro"
+"[english]Settings_Audio_Device_Other"	"Other"
+"Settings_Audio_Default"	"Predefinito"
+"[english]Settings_Audio_Default"	"Default"
+"Settings_Audio_AudioMirrorEnable"	"Attiva duplicazione audio"
+"[english]Settings_Audio_AudioMirrorEnable"	"Enable audio mirror"
+"FirmwareWizard_UpdateBasestationWireless_Fail_BaseStuckInDFU"	"Un collegamento USB inatteso alla stazione di base sta impedendo il completamento dell'aggiornamento wireless.<ul><li><font color=#aaaa00>Scollega il cavo di alimentazione della stazione di base.<li>Disconnetti il cavo USB inserito nella stazione di base.<li>Ricollega solo il cavo di alimentazione della stazione di base.<li>Attendi 30 secondi per il completamento dell'aggiornamento interno della stazione di base.</font></ul><br>Il LED della stazione di base potrebbe essere spento durante l'aggiornamento interno.<br>Non scollegare o collegare altri dispositivi alla stazione di base durante l'aggiornamento."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_BaseStuckInDFU"	"An unexpected USB connection to the Base Station is preventing the wireless update from finishing.<ul><li><font color=#aaaa00>Unplug the Base Station's power cable.<li>Unplug the USB cable that is plugged into the Base Station.<li>Replug only the Base Station's power cable.<li>Wait 30 seconds for the Base Station to finish its internal update.</font></ul><br>The Base Station LED may be off during its internal update.<br>Do not unplug or make any other connections to the Base Station during its update."
+"FirmwareWizard_UpdateBasestationWireless_Fail_BaseNeedsPowerCycle"	"Questa stazione di base deve essere riavviata per proseguire con l'aggiornamento. <br><br><font color=#aaaa00>Si prega di scollegare e quindi ricollegare il cavo di alimentazione della stazione di base prima di continuare.</font>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_BaseNeedsPowerCycle"	"This Base Station needs to be power cycled to continue the update.<br><br><font color=#aaaa00>Please unplug and then replug the Base Station's power cable before continuing.</font>"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox_BS20"	"Se il problema persiste... <ul><li>Esci da SteamVR.<li>Scollega qualunque cavo USB collegato alla stazione di base.<li>NON collegare altri dispositivi USB alla stazione di base.<li>Scollega e ricollega il cavo di alimentazione di eventuali Link Box.<li>Scollega e ricollega il cavo di alimentazione della stazione di base.<li>Avvia SteamVR e riprova.</ul>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox_BS20"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug any USB cable connected to the Base Station.<li>Do NOT connect USB to the Base Station.<li>Unplug and replug the Link Box power cable.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR and try again.</ul>"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_BS20"	"Se il problema persiste... <ul><li>Esci da SteamVR.<li>Scollega qualunque cavo USB collegato alla stazione di base.<li>NON collegare altri dispositivi USB alla stazione di base.<li>Scollega e ricollega il cavo di alimentazione della stazione di base.<li>Avvia SteamVR e riprova.</ul>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_BS20"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug any USB cable connected to the Base Station.<li>Do NOT connect USB to the Base Station.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR and try again.</ul>"
+"BS_PromotePowerManagement_Title"	"SteamVR"
+"[english]BS_PromotePowerManagement_Title"	"SteamVR"
+"BS_PromotePowerManagement_Explanation"	"SteamVR può gestire il risparmio energetico delle tue stazioni di base.<br><br>Le stazioni di base andranno in modalità standby quando SteamVR non è in uso e si riattiveranno al riavvio di SteamVR.<br>"
+"[english]BS_PromotePowerManagement_Explanation"	"SteamVR can power manage your Base Stations.<br><br>Power managed Base Stations go into standby mode when SteamVR is not in use and wake up again when SteamVR starts.<br>"
+"BS_PromotePowerManagement_Enable"	"Attiva il risparmio energetico della stazione di base *"
+"[english]BS_PromotePowerManagement_Enable"	"Enable Base Station Power Management *"
+"BS_PromotePowerManagement_Explanation2"	"<br><font color=#ffffff>* OPZIONE NON RACCOMANDATA per spazi di tracciamento condivisi tra diversi utenti di SteamVR.</font>"
+"[english]BS_PromotePowerManagement_Explanation2"	"<br><font color=#ffffff>* NOT RECOMMENDED for shared tracking spaces with multiple SteamVR users.</font>"
+"BS_PromotePowerManagement_ExitNow"	"Abbandona (%1)"
+"[english]BS_PromotePowerManagement_ExitNow"	"Exit Now (%1)"
 }
 }
