--- a/content/vrmonitor/translations/vrmonitor_japanese.txt
+++ b/content/vrmonitor/translations/vrmonitor_japanese.txt
@@ -1112,9 +1112,9 @@
 "Settings_Audio_On"	"SteamVRを使用する時..."
 "[english]Settings_Audio_On"	"When using SteamVR..."
 "Settings_Audio_AudioPlay"	"プレイバックデバイスの設定："
-"[english]Settings_Audio_AudioPlay"	"Set Playback device to"
+"[english]Settings_Audio_AudioPlay"	"Audio output device"
 "Settings_Audio_AudioRecord"	"録音デバイスの設定："
-"[english]Settings_Audio_AudioRecord"	"Set Record device to"
+"[english]Settings_Audio_AudioRecord"	"Audio input device"
 "Settings_Audio_Off"	"SteamVRを使用しない時..."
 "[english]Settings_Audio_Off"	"When not use SteamVR..."
 "Settings_Audio_HDMIGain"	"VIVE HDMI オーディオのゲインリダクションを有効化"
