--- a/content/vrmonitor/translations/vrmonitor_latam.txt
+++ b/content/vrmonitor/translations/vrmonitor_latam.txt
@@ -605,7 +605,7 @@
 "[english]PairingWizard_NoDonglesAvailable_Title"	"Two controllers already in use"
 "PairingWizard_NoDonglesAvailable_Header"	""
 "[english]PairingWizard_NoDonglesAvailable_Header"	""
-"PairingWizard_NoDonglesAvailable_Content"	"Para emparejar controladores adicionales, se debe desactivar al menos uno. Sólo se pueden conectar dos controladores al mismo tiempo."
+"PairingWizard_NoDonglesAvailable_Content"	"Para emparejar controladores adicionales, se debe desactivar al menos uno. Solo se pueden conectar dos controladores al mismo tiempo."
 "[english]PairingWizard_NoDonglesAvailable_Content"	"To pair additional controllers, at least one of your controllers must be turned off. Only two controllers can be connected at a time."
 "PairingWizard_NoDonglesDetected_Title"	"No se ha detectado ningún casco"
 "[english]PairingWizard_NoDonglesDetected_Title"	"No headset detected"
@@ -1111,10 +1111,10 @@
 "[english]Settings_Audio_Header"	"Audio Settings"
 "Settings_Audio_On"	"Al usar SteamVR..."
 "[english]Settings_Audio_On"	"When using SteamVR..."
-"Settings_Audio_AudioPlay"	"Dispositivo de reproducción:"
-"[english]Settings_Audio_AudioPlay"	"Set Playback device to"
-"Settings_Audio_AudioRecord"	"Dispositivo de grabación:"
-"[english]Settings_Audio_AudioRecord"	"Set Record device to"
+"Settings_Audio_AudioPlay"	"Dispositivo de salida de audio"
+"[english]Settings_Audio_AudioPlay"	"Audio output device"
+"Settings_Audio_AudioRecord"	"Dispositivo de entrada de audio"
+"[english]Settings_Audio_AudioRecord"	"Audio input device"
 "Settings_Audio_Off"	"Al salir de SteamVR..."
 "[english]Settings_Audio_Off"	"When not use SteamVR..."
 "Settings_Audio_HDMIGain"	"Activar la reducción de ganancia en el audio HDMI de VIVE"
@@ -2263,21 +2263,21 @@
 "[english]FirmwareWizard_BaseStationBluetoothBootloaderUpdate"	"Device Update"
 "FirmwareWizard_BaseStationBluetoothRadioUpdate"	"Actualización del dispositivo"
 "[english]FirmwareWizard_BaseStationBluetoothRadioUpdate"	"Device Update"
-"BS20_ConfigureChannel_VisibleNowInTracking"	"Visible en esta sesión de seguimiento"
+"BS20_ConfigureChannel_VisibleNowInTracking"	"Visible ahora en esta sesión de seguimiento."
 "[english]BS20_ConfigureChannel_VisibleNowInTracking"	"Visible now in this tracking session."
-"BS20_ConfigureChannel_ObservedInTracking"	"Detectada en una sesión de seguimiento anterior"
+"BS20_ConfigureChannel_ObservedInTracking"	"Detectada en una sesión de seguimiento anterior."
 "[english]BS20_ConfigureChannel_ObservedInTracking"	"Observed in a prior tracking session."
-"BS20_ConfigureChannel_Identify"	"Haz clic para identificar la estación base"
+"BS20_ConfigureChannel_Identify"	"Haz clic para identificar la estación base."
 "[english]BS20_ConfigureChannel_Identify"	"Click to identify Base Station."
 "BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"%1 requiere una actualización del dispositivo para activar la identificación."
 "[english]BS20_ConfigureChannel_IdentifyRequiresFirmareUpdate"	"%1 requires a device update to enable device identification."
-"BS_PowerManagement_VisibleNowInTracking"	"Visible ahora"
+"BS_PowerManagement_VisibleNowInTracking"	"Visible ahora en esta sesión de seguimiento."
 "[english]BS_PowerManagement_VisibleNowInTracking"	"Visible now in this tracking session."
-"Monitor_RestartRequestedDialog_Title"	"Se necesita reiniciar"
+"Monitor_RestartRequestedDialog_Title"	"Es necesario reiniciar el controlador %1"
 "[english]Monitor_RestartRequestedDialog_Title"	"Restart for %1 driver"
 "Monitor_RestartRequestedDialog_MessageNoReason"	"El controlador %1 necesita reiniciar SteamVR."
 "[english]Monitor_RestartRequestedDialog_MessageNoReason"	"Driver %1 needs to restart SteamVR."
-"Monitor_RestartRequestedDialog_Message"	"El controlador %1 necesita reiniciar SteamVR.\n%2"
+"Monitor_RestartRequestedDialog_Message"	"%1"
 "[english]Monitor_RestartRequestedDialog_Message"	"%1"
 "Monitor_RestartRequestedDialog_Restart"	"Reiniciar SteamVR"
 "[english]Monitor_RestartRequestedDialog_Restart"	"Restart SteamVR"
@@ -2309,7 +2309,7 @@
 "[english]BS_PowerManagement_FailedToConnectRefresh"	"%1 failed to connect. Click 'Refresh' to try again."
 "Monitor_WakingBaseStations"	"Encendiendo estaciones base..."
 "[english]Monitor_WakingBaseStations"	"Base stations waking up..."
-"Monitor_PuttingBaseStationsInStandby"	"Apagando estaciones base..."
+"Monitor_PuttingBaseStationsInStandby"	"Estaciones base en modo de espera..."
 "[english]Monitor_PuttingBaseStationsInStandby"	"Base stations standing by..."
 "Settings_BaseStation_ContinueBaseStationUpdate"	"Recuperación de actualización incompleta"
 "[english]Settings_BaseStation_ContinueBaseStationUpdate"	"Recover From Incomplete Update"
@@ -2337,6 +2337,8 @@
 "[english]BS20_UpdateRecovery_Incomplete"	"Scanning For Base Stations...\n\nIncomplete."
 "BS20_UpdateRecovery_FoundStation"	"Búsqueda completada.<br><br><font color=#ffffff><b>Se ha encontrado una estación base con una actualización incompleta que le impide funcionar normalmente.</b></font><br><br>Haz clic en \"actualizar dispositivo\" para continuar con la actualización."
 "[english]BS20_UpdateRecovery_FoundStation"	"Scan Completed.<br><br><font color=#ffffff><b>Discovered a Base Station with an incomplete update preventing it from operating normally.</b></font><br><br>Click 'Update Device' below to continue the update."
+"BS20_UpdateRecovery_NoStationsFound"	"Búsqueda completada.\n\nNo hay estaciones base emitiendo cerca que necesiten recuperación."
+"[english]BS20_UpdateRecovery_NoStationsFound"	"Scan Completed.\n\nThere are no broadcasting Base Stations needing recovery within proximity."
 "BS20_UpdateRecovery_Refresh"	"Buscar de nuevo"
 "[english]BS20_UpdateRecovery_Refresh"	"Scan Again"
 "BS20_UpdateRecovery_UpdateDevice"	"Recuperar dispositivo"
@@ -2451,6 +2453,10 @@
 "[english]BS_PowerManagement_FullStandby"	"Sleep"
 "BS_PowerManagement_FullStandby_Explanation"	"Las estaciones base apagarán sus láseres y motores."
 "[english]BS_PowerManagement_FullStandby_Explanation"	"Base Stations will power off their lasers and motors."
+"BS_PowerManagement_ConnectionFailureLegend"	"Fallo de conexión. Haz clic en Actualizar para intentarlo de nuevo."
+"[english]BS_PowerManagement_ConnectionFailureLegend"	"Connection failure. Click 'Refresh' to try again."
+"BS20_UpdateRecovery_BluetoothRequired"	"La recuperación de la actualización requiere que la comunicación Bluetooth esté habilitada.\n\nHabilita la comunicación Bluetooth en Configuración."
+"[english]BS20_UpdateRecovery_BluetoothRequired"	"Update recovery requires Bluetooth communication to be enabled.\n\nPlease enable Bluetooth communication in Settings."
 "BaseStation_Mode_Text"	"Modo %1"
 "[english]BaseStation_Mode_Text"	"Mode %1"
 "BS20_ConfigureChannel_Title"	"Configuración de canal de la estación base 2.0"
@@ -2463,14 +2469,28 @@
 "[english]BS20_ConfigureChannel_Description"	"Select an unused channel for this Base Station to avoid potential tracking conflicts."
 "BS20_ConfigureChannel_InUseByPrefix"	"Actualmente utilizado por:"
 "[english]BS20_ConfigureChannel_InUseByPrefix"	"Currently used by:"
+"BS20_ConfigureChannel_Legend"	"Señala un canal utilizado por otras estaciones base en la proximidad de radio."
+"[english]BS20_ConfigureChannel_Legend"	"Denotes a channel used by other Base Stations in radio proximity."
 "BS20_ConfigureChannel_AutomaticConfiguration"	"Configuración Automática"
 "[english]BS20_ConfigureChannel_AutomaticConfiguration"	"Automatic Configuration"
 "BS20_ConfigureChannel_AutoConfig_NoChannelConflictsFound"	"No hay conflictos de canales."
 "[english]BS20_ConfigureChannel_AutoConfig_NoChannelConflictsFound"	"There are no channel conflicts."
+"BS20_ConfigureChannel_AutoConfig_NoFreeChannels"	"No hay canales libres para resolver %1 posibles conflictos de canales. Puede que tengas que configurar los canales manualmente."
+"[english]BS20_ConfigureChannel_AutoConfig_NoFreeChannels"	"There are no free channels to resolve %1 potential channel conflicts. You may need to manually configure channels."
+"BS20_ConfigureChannel_AutoConfig_NotEnoughFreeChannels"	"Solo hay suficientes canales libres para resolver %1 de los %2 posibles conflictos de canales. ¿Continuar y resolver los conflictos?"
+"[english]BS20_ConfigureChannel_AutoConfig_NotEnoughFreeChannels"	"There are only enough free channels to resolve %1 out of %2 potential channel conflicts. Continue and resolve conflicts?"
+"BS20_ConfigureChannel_AutoConfigContinue"	"Hay %1 posibles conflictos de canales que pueden resolverse automáticamente reasignando sus canales. ¿Continuar y resolver los conflictos?"
+"[english]BS20_ConfigureChannel_AutoConfigContinue"	"There are %1 potential channel conflicts that can be automatically resolved by re-assigning their channels. Continue and resolve conflicts?"
 "BS20_ConfigureChannel_AutoConfig_SuccessfulCompletion"	"Configuración automática completada.\n\nNo hay conflictos de canales."
 "[english]BS20_ConfigureChannel_AutoConfig_SuccessfulCompletion"	"Automatic Configuration completed.\n\nThere are no channel conflicts."
 "BS20_ConfigureChannel_AutoConfig_Incomplete"	"Configuración automática completada.\n\nQuedan %1 posibles conflictos de canales. Puede que tengas que configurar los canales manualmente."
 "[english]BS20_ConfigureChannel_AutoConfig_Incomplete"	"Automatic Configuration completed.\n\nThere are %1 remaining potential channel conflicts. You may need to manually configure channels."
+"BS20_ConfigureChannel_AutoConfig_UnknownChannels"	"Hay %1 estación(es) base cuyo(s) canal(es) no se ha(n) podido determinar y que puede(n) dar lugar a conflictos de canales.\n"
+"[english]BS20_ConfigureChannel_AutoConfig_UnknownChannels"	"There are %1 Base Stations whose channels could not be determined that may result in potential channel conflicts.\n"
+"BS20_ConfigureChannel_ChannelConfigurationFailure"	"%1 no ha podido aceptar la configuración de canal solicitada."
+"[english]BS20_ConfigureChannel_ChannelConfigurationFailure"	"%1 failed to accept the requested channel configuration."
+"BS20_ConfigureChannel_ScanForMore"	"Buscar más"
+"[english]BS20_ConfigureChannel_ScanForMore"	"Scan For More"
 "BS20_ConfigureChannel_Apply"	"Aplicar"
 "[english]BS20_ConfigureChannel_Apply"	"Apply"
 "BS20_ConfigureChannel_Connecting"	"Conectando..."
@@ -2489,6 +2509,12 @@
 "[english]BS20_ConfigureChannel_NoConflictOnChannel"	"No conflict on Channel %1"
 "BS20_ConfigureChannel_ProgressScanComplete"	"Búsqueda completada.\n\nHaz clic en el enlace de un canal para cambiarlo."
 "[english]BS20_ConfigureChannel_ProgressScanComplete"	"Scan Completed.\n\nClick on a channel link to change it."
+"BS20_ConfigureChannel_ProgressScanNoStationsFound"	"Búsqueda completada.\n\nNo hay estaciones base 2.0 emitiendo cerca."
+"[english]BS20_ConfigureChannel_ProgressScanNoStationsFound"	"Scan Completed.\n\nThere are no broadcasting 2.0 Base Stations within your proximity."
+"BS20_ConfigureChannel_ProgressScanning"	"Buscando estaciones base...\n\nQueda(n) %1 segundo(s)."
+"[english]BS20_ConfigureChannel_ProgressScanning"	"Scanning For Base Stations...\n\n%1 Seconds Remaining."
+"BS20_ConfigureChannel_ProgressWritingChannel"	"\nEscribiendo canal...\n"
+"[english]BS20_ConfigureChannel_ProgressWritingChannel"	"\nWriting Channel...\n"
 "BS20_ConfigureChannel_RSSI"	"RSSI: %1"
 "[english]BS20_ConfigureChannel_RSSI"	"RSSI: %1"
 "Key_Escape_Abbreviation"	"ESC"
@@ -2519,6 +2545,8 @@
 "[english]HeadsetView_EyeMode_BothRightDominant"	"Both Eyes - Right Dominant"
 "HeadsetView_ViewMode_Center"	"Centrar vista"
 "[english]HeadsetView_ViewMode_Center"	"Center View"
+"HeadsetView_DebugCommands"	"Abrir comandos de depuración"
+"[english]HeadsetView_DebugCommands"	"Open Debug Commands"
 "HeadsetView_HideButtonLabel"	"Ocultar vista de RV"
 "[english]HeadsetView_HideButtonLabel"	"Hide VR View"
 "Settings_PerApplication_Reprojection_Header"	"Reproyección"
@@ -2531,5 +2559,21 @@
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_USBConnected"	"An unexpected USB connection to the Base Station is preventing the wireless update.<br><br><font color=#aaaa00>Please unplug the USB cable that is plugged into the Base Station.</font>"
 "FirmwareWizard_Failure_WirelessUpdateBaseStuckInDFU"	"Una conexión USB inesperada a la estación base está impidiendo que finalice la actualización inalámbrica.<ul><li><font color=#aaaa00>Desconecta el cable de alimentación de la estación base.<li>Desconecta el cable USB que está conectado a la estación base.<li>Vuelve a conectar únicamente el cable de alimentación de la estación base.<li>Espera 30 segundos para que la estación base termine su actualización interna.</font></ul><br>El LED de la estación base puede estar apagado durante su actualización.<br>No desconectes ni realices ninguna otra conexión a la estación base durante su actualización."
 "[english]FirmwareWizard_Failure_WirelessUpdateBaseStuckInDFU"	"An unexpected USB connection to the Base Station is preventing the wireless update from finishing.<ul><li><font color=#aaaa00>Unplug the Base Station's power cable.<li>Unplug the USB cable that is plugged into the Base Station.<li>Replug only the Base Station's power cable.<li>Wait 30 seconds for the Base Station to finish its internal update.</font></ul><br>The Base Station LED may be off during its internal update.<br>Do not unplug or make any other connections to the Base Station during its update."
+"Settings_Audio_Device_HMD"	"Visor de RV"
+"[english]Settings_Audio_Device_HMD"	"VR Headset"
+"Settings_Audio_Device_Other"	"Otro"
+"[english]Settings_Audio_Device_Other"	"Other"
+"Settings_Audio_Default"	"Predeterminado"
+"[english]Settings_Audio_Default"	"Default"
+"Settings_Audio_AudioMirrorEnable"	"Activar duplicación de audio"
+"[english]Settings_Audio_AudioMirrorEnable"	"Enable audio mirror"
+"FirmwareWizard_UpdateBasestationWireless_Fail_BaseStuckInDFU"	"Una conexión USB inesperada a la estación base impide que finalice la actualización inalámbrica.<ul><li><font color=#aaaa00>Desenchufa el cable de alimentación de la estación base.<li>Desenchufa el cable USB que está conectado a la estación base.<li>Vuelve a enchufar solo el cable de alimentación de la estación base.<li>Espera 30 segundos para que la estación base termine su actualización interna.</font></ul><br>El LED de la estación base puede estar apagado durante su actualización interna.<br>No desconectes ni realices ninguna otra conexión a la estación base durante su actualización."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_BaseStuckInDFU"	"An unexpected USB connection to the Base Station is preventing the wireless update from finishing.<ul><li><font color=#aaaa00>Unplug the Base Station's power cable.<li>Unplug the USB cable that is plugged into the Base Station.<li>Replug only the Base Station's power cable.<li>Wait 30 seconds for the Base Station to finish its internal update.</font></ul><br>The Base Station LED may be off during its internal update.<br>Do not unplug or make any other connections to the Base Station during its update."
+"FirmwareWizard_UpdateBasestationWireless_Fail_BaseNeedsPowerCycle"	"Esta estación base debe apagarse y volver a encenderse para continuar la actualización.<br><br><font color=#aaaa00>Desenchufa y vuelve a enchufar el cable de alimentación de la estación base para continuar.</font>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_BaseNeedsPowerCycle"	"This Base Station needs to be power cycled to continue the update.<br><br><font color=#aaaa00>Please unplug and then replug the Base Station's power cable before continuing.</font>"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox_BS20"	"Si la actualización de este dispositivo sigue fallando sin progresar: <ul><li>Sal de SteamVR.<li>Desenchufa cualquier cable USB conectado a la estación base.<li>NO conectes el USB a la estación base.<li>Desenchufa y vuelve a enchufar el cable de alimentación de Link Box.<li>Desenchufa y vuelve a enchufar el cable de alimentación de la estación base.<li>Inicia SteamVR e inténtalo de nuevo.</ul>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox_BS20"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug any USB cable connected to the Base Station.<li>Do NOT connect USB to the Base Station.<li>Unplug and replug the Link Box power cable.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR and try again.</ul>"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_BS20"	"Si la actualización de este dispositivo sigue fallando sin progresar: <ul><li>Sal de SteamVR.<li>Desenchufa cualquier cable USB conectado a la estación base.<li>NO conectes el USB a la estación base.<li>Desenchufa y vuelve a enchufar el cable de alimentación de la estación base.<li>Inicia SteamVR e inténtalo de nuevo.</ul>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_BS20"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug any USB cable connected to the Base Station.<li>Do NOT connect USB to the Base Station.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR and try again.</ul>"
 }
 }
