--- a/content/vrmonitor/translations/vrmonitor_norwegian.txt
+++ b/content/vrmonitor/translations/vrmonitor_norwegian.txt
@@ -1119,10 +1119,10 @@
 "[english]Settings_Audio_Header"	"Audio Settings"
 "Settings_Audio_On"	"Når SteamVR brukes..."
 "[english]Settings_Audio_On"	"When using SteamVR..."
-"Settings_Audio_AudioPlay"	"Sett avspillingsenhet til"
-"[english]Settings_Audio_AudioPlay"	"Set Playback device to"
-"Settings_Audio_AudioRecord"	"Sett innspillingsenhet til"
-"[english]Settings_Audio_AudioRecord"	"Set Record device to"
+"Settings_Audio_AudioPlay"	"Utdataenhet"
+"[english]Settings_Audio_AudioPlay"	"Audio output device"
+"Settings_Audio_AudioRecord"	"Inndataenhet"
+"[english]Settings_Audio_AudioRecord"	"Audio input device"
 "Settings_Audio_Off"	"Når SteamVR ikke brukes..."
 "[english]Settings_Audio_Off"	"When not use SteamVR..."
 "Settings_Audio_HDMIGain"	"Slå på forsterkningsreduksjon på VIVE HDMI-lyd"
@@ -2572,5 +2572,31 @@
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_USBConnected"	"An unexpected USB connection to the Base Station is preventing the wireless update.<br><br><font color=#aaaa00>Please unplug the USB cable that is plugged into the Base Station.</font>"
 "FirmwareWizard_Failure_WirelessUpdateBaseStuckInDFU"	"En uventet USB-tilkobling til basestasjonen hindrer den trådløse oppdateringen fra å bli ferdig.<ul><li><font color=#aaaa00>Trekk ut basestasjonens strømkabel.<li>Trekk ut USB-kabelen som er koblet til i basestasjonen.<li>Koble til igjen basestasjonens strømkabel.<li>Vent i 30 sekunder, slik at basestasjonen gjør seg ferdig med den interne oppdateringen.</font></ul><br>Basestasjonens lys er muligens slått av under den interne oppdateringen.<br>Ikke koble fra eller til noen annet i basestasjonen, mens oppdateringen pågår."
 "[english]FirmwareWizard_Failure_WirelessUpdateBaseStuckInDFU"	"An unexpected USB connection to the Base Station is preventing the wireless update from finishing.<ul><li><font color=#aaaa00>Unplug the Base Station's power cable.<li>Unplug the USB cable that is plugged into the Base Station.<li>Replug only the Base Station's power cable.<li>Wait 30 seconds for the Base Station to finish its internal update.</font></ul><br>The Base Station LED may be off during its internal update.<br>Do not unplug or make any other connections to the Base Station during its update."
+"Settings_Audio_Device_HMD"	"VR-hodesett"
+"[english]Settings_Audio_Device_HMD"	"VR Headset"
+"Settings_Audio_Device_Other"	"Annen"
+"[english]Settings_Audio_Device_Other"	"Other"
+"Settings_Audio_Default"	"Standard"
+"[english]Settings_Audio_Default"	"Default"
+"Settings_Audio_AudioMirrorEnable"	"Slå på lydspeiling"
+"[english]Settings_Audio_AudioMirrorEnable"	"Enable audio mirror"
+"FirmwareWizard_UpdateBasestationWireless_Fail_BaseStuckInDFU"	"En uventet USB-tilkobling til basestasjonen hindrer den trådløse oppdateringen fra å bli ferdig.<ul><li><font color=#aaaa00>Trekk ut basestasjonens strømkabel.<li>Trekk ut USB-kabelen som er koblet til i basestasjonen.<li>Koble til igjen basestasjonens strømkabel.<li>Vent i 30 sekunder, slik at basestasjonen gjør seg ferdig med den interne oppdateringen.</font></ul><br>Basestasjonens lys er muligens slått av under den interne oppdateringen.<br>Ikke koble fra eller til noen annet i basestasjonen, mens oppdateringen pågår."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_BaseStuckInDFU"	"An unexpected USB connection to the Base Station is preventing the wireless update from finishing.<ul><li><font color=#aaaa00>Unplug the Base Station's power cable.<li>Unplug the USB cable that is plugged into the Base Station.<li>Replug only the Base Station's power cable.<li>Wait 30 seconds for the Base Station to finish its internal update.</font></ul><br>The Base Station LED may be off during its internal update.<br>Do not unplug or make any other connections to the Base Station during its update."
+"FirmwareWizard_UpdateBasestationWireless_Fail_BaseNeedsPowerCycle"	"Denne basestasjonen må startes på nytt før oppdateringen kan fortsette.<br><br><font color=#aaaa00>Koble ut og inn igjen støpselet til basestasjonen før du går videre.</font>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_BaseNeedsPowerCycle"	"This Base Station needs to be power cycled to continue the update.<br><br><font color=#aaaa00>Please unplug and then replug the Base Station's power cable before continuing.</font>"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox_BS20"	"Hvis det fremdeles oppstår feil med enhetsoppdateringen:<ul><li>Avslutt SteamVR.<li>Koble ut eventuelle USB-kabler fra basestasjonen.<li>IKKE koble til USB-tilkoblinger i basestasjonen.<li>Koble ut og inn igjen strømkabelen til koblingsboksen.<li>Koble ut og inn igjen strømkabelen til basestasjonen.<li>Start SteamVR og prøv igjen.</ul>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox_BS20"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug any USB cable connected to the Base Station.<li>Do NOT connect USB to the Base Station.<li>Unplug and replug the Link Box power cable.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR and try again.</ul>"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_BS20"	"Hvis det fremdeles oppstår feil med enhetsoppdateringen:<ul><li>Avslutt SteamVR.<li>Koble ut eventuelle USB-kabler fra basestasjonen.<li>IKKE koble til USB-tilkoblinger i basestasjonen.<li>Koble ut og inn igjen strømkabelen til basestasjonen.<li>Start SteamVR og prøv igjen.</ul>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_BS20"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug any USB cable connected to the Base Station.<li>Do NOT connect USB to the Base Station.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR and try again.</ul>"
+"BS_PromotePowerManagement_Title"	"SteamVR"
+"[english]BS_PromotePowerManagement_Title"	"SteamVR"
+"BS_PromotePowerManagement_Explanation"	"SteamVR kan håndtere strømstyring av basestasjoner.<br><br>Strømstyrte basestasjoner går i ventemodus når SteamVR ikke er i bruk, og våkner når SteamVR starter.<br>"
+"[english]BS_PromotePowerManagement_Explanation"	"SteamVR can power manage your Base Stations.<br><br>Power managed Base Stations go into standby mode when SteamVR is not in use and wake up again when SteamVR starts.<br>"
+"BS_PromotePowerManagement_Enable"	"Slå på strømstyring av basestasjoner *"
+"[english]BS_PromotePowerManagement_Enable"	"Enable Base Station Power Management *"
+"BS_PromotePowerManagement_Explanation2"	"<br><font color=#ffffff>* ANBEFALES IKKE for sporingsområder, som deles med flere SteamVR-brukere.</font>"
+"[english]BS_PromotePowerManagement_Explanation2"	"<br><font color=#ffffff>* NOT RECOMMENDED for shared tracking spaces with multiple SteamVR users.</font>"
+"BS_PromotePowerManagement_ExitNow"	"Avslutt nå (%1)"
+"[english]BS_PromotePowerManagement_ExitNow"	"Exit Now (%1)"
 }
 }
