--- a/content/vrmonitor/translations/vrmonitor_polish.txt
+++ b/content/vrmonitor/translations/vrmonitor_polish.txt
@@ -1126,10 +1126,10 @@
 "[english]Settings_Audio_Header"	"Audio Settings"
 "Settings_Audio_On"	"Gdy używasz SteamVR..."
 "[english]Settings_Audio_On"	"When using SteamVR..."
-"Settings_Audio_AudioPlay"	"Ustaw urządzenie do odtwarzania na:"
-"[english]Settings_Audio_AudioPlay"	"Set Playback device to"
-"Settings_Audio_AudioRecord"	"Ustaw urządzenie do nagrywania na:"
-"[english]Settings_Audio_AudioRecord"	"Set Record device to"
+"Settings_Audio_AudioPlay"	"Urządzenie wejściowe dźwięku"
+"[english]Settings_Audio_AudioPlay"	"Audio output device"
+"Settings_Audio_AudioRecord"	"Urządzenie wyjściowe dźwięku"
+"[english]Settings_Audio_AudioRecord"	"Audio input device"
 "Settings_Audio_Off"	"Gdy nie używasz SteamVR..."
 "[english]Settings_Audio_Off"	"When not use SteamVR..."
 "Settings_Audio_HDMIGain"	"Włącz redukcję wzmocnienia sygnału wyjściowego VIVE HDMI Audio"
@@ -2581,5 +2581,31 @@
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_USBConnected"	"An unexpected USB connection to the Base Station is preventing the wireless update.<br><br><font color=#aaaa00>Please unplug the USB cable that is plugged into the Base Station.</font>"
 "FirmwareWizard_Failure_WirelessUpdateBaseStuckInDFU"	"Nieoczekiwane połączenie USB ze stacją bazową uniemożliwia zakończenie bezprzewodowej aktualizacji.<ul><li><font color=#aaaa00>Odłącz kabel zasilający stacji bazowej.<li>Odłącz kabel USB, który jest podpięty do stacji bazowej.<li>Podłącz ponownie tylko kabel zasilający stacji bazowej.<li>Odczekaj 30 sekund, aż stacja bazowa zakończy swoją wewnętrzną aktualizację.</font></ul><br>Dioda LED stacji bazowej może być wyłączona podczas jej wewnętrznej aktualizacji.<br>Nie odłączaj ani nie podłączaj innych urządzeń do stacji bazowej podczas tej aktualizacji."
 "[english]FirmwareWizard_Failure_WirelessUpdateBaseStuckInDFU"	"An unexpected USB connection to the Base Station is preventing the wireless update from finishing.<ul><li><font color=#aaaa00>Unplug the Base Station's power cable.<li>Unplug the USB cable that is plugged into the Base Station.<li>Replug only the Base Station's power cable.<li>Wait 30 seconds for the Base Station to finish its internal update.</font></ul><br>The Base Station LED may be off during its internal update.<br>Do not unplug or make any other connections to the Base Station during its update."
+"Settings_Audio_Device_HMD"	"Gogle VR"
+"[english]Settings_Audio_Device_HMD"	"VR Headset"
+"Settings_Audio_Device_Other"	"Inne"
+"[english]Settings_Audio_Device_Other"	"Other"
+"Settings_Audio_Default"	"Domyślne"
+"[english]Settings_Audio_Default"	"Default"
+"Settings_Audio_AudioMirrorEnable"	"Włącz duplikację dźwięku"
+"[english]Settings_Audio_AudioMirrorEnable"	"Enable audio mirror"
+"FirmwareWizard_UpdateBasestationWireless_Fail_BaseStuckInDFU"	"Nieoczekiwane połączenie USB ze stacją bazową uniemożliwia zakończenie bezprzewodowej aktualizacji.<ul><li><font color=#aaaa00>Odłącz kabel zasilający stacji bazowej.<li>Odłącz kabel USB, który jest podpięty do stacji bazowej.<li>Podłącz ponownie tylko kabel zasilający stacji bazowej.<li>Odczekaj 30 sekund, aż stacja bazowa zakończy swoją wewnętrzną aktualizację.</font></ul><br>Dioda LED stacji bazowej może być wyłączona podczas jej wewnętrznej aktualizacji.<br>Nie odłączaj ani nie podłączaj innych urządzeń do stacji bazowej podczas tej aktualizacji."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_BaseStuckInDFU"	"An unexpected USB connection to the Base Station is preventing the wireless update from finishing.<ul><li><font color=#aaaa00>Unplug the Base Station's power cable.<li>Unplug the USB cable that is plugged into the Base Station.<li>Replug only the Base Station's power cable.<li>Wait 30 seconds for the Base Station to finish its internal update.</font></ul><br>The Base Station LED may be off during its internal update.<br>Do not unplug or make any other connections to the Base Station during its update."
+"FirmwareWizard_UpdateBasestationWireless_Fail_BaseNeedsPowerCycle"	"Ta stacja bazowa musi zostać wyłączona i włączona, by kontynuować aktualizację.<br><br><font color=#aaaa00>Przed kontynuowaniem wyjmij wtyczkę zasilania stacji bazowej, a następnie ją podłącz.</font>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_BaseNeedsPowerCycle"	"This Base Station needs to be power cycled to continue the update.<br><br><font color=#aaaa00>Please unplug and then replug the Base Station's power cable before continuing.</font>"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox_BS20"	"Jeśli kolejne próby aktualizacji urządzenia będą się kończyć niepowodzeniem i nic się nie zmieni... <ul><li>Wyjdź ze SteamVR.<li>Odłącz wszelkie kable USB podłączone do stacji bazowej.<li>NIE PODŁĄCZAJ żadnych kabli USB do stacji bazowej.<li>Odłącz kabel zasilający Link Boxa, a następnie podłącz go ponownie.<li>Odłącz kabel zasilający stację bazową, a następnie podłącz go ponownie.<li>Włącz SteamVR i spróbuj jeszcze raz.</ul>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox_BS20"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug any USB cable connected to the Base Station.<li>Do NOT connect USB to the Base Station.<li>Unplug and replug the Link Box power cable.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR and try again.</ul>"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_BS20"	"Jeśli kolejne próby aktualizacji urządzenia będą się kończyć niepowodzeniem i nic się nie zmieni... <ul><li>Wyjdź ze SteamVR.<li>Odłącz wszelkie kable USB podłączone do stacji bazowej.<li>NIE PODŁĄCZAJ żadnych kabli USB do stacji bazowej.<li>Odłącz kabel zasilający stację bazową, a następnie podłącz go ponownie.<li>Włącz SteamVR i spróbuj jeszcze raz.</ul>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_BS20"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug any USB cable connected to the Base Station.<li>Do NOT connect USB to the Base Station.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR and try again.</ul>"
+"BS_PromotePowerManagement_Title"	"SteamVR"
+"[english]BS_PromotePowerManagement_Title"	"SteamVR"
+"BS_PromotePowerManagement_Explanation"	"SteamVR może zarządzać zasilaniem twoich stacji bazowych.<br><br>Stacje bazowe w trybie zarządzania energią przechodzą w tryb czuwania, gdy SteamVR nie jest w użyciu i wybudzają się po uruchomieniu SteamVR.<br>"
+"[english]BS_PromotePowerManagement_Explanation"	"SteamVR can power manage your Base Stations.<br><br>Power managed Base Stations go into standby mode when SteamVR is not in use and wake up again when SteamVR starts.<br>"
+"BS_PromotePowerManagement_Enable"	"Włącz zarządzanie energią stacji bazowych *"
+"[english]BS_PromotePowerManagement_Enable"	"Enable Base Station Power Management *"
+"BS_PromotePowerManagement_Explanation2"	"<br><font color=#ffffff>* NIEZALECANE dla współdzielonych obszarów śledzenia z wieloma użytkownikami SteamVR.</font>"
+"[english]BS_PromotePowerManagement_Explanation2"	"<br><font color=#ffffff>* NOT RECOMMENDED for shared tracking spaces with multiple SteamVR users.</font>"
+"BS_PromotePowerManagement_ExitNow"	"Wyjdź teraz (%1)"
+"[english]BS_PromotePowerManagement_ExitNow"	"Exit Now (%1)"
 }
 }
