--- a/content/vrmonitor/translations/vrmonitor_russian.txt
+++ b/content/vrmonitor/translations/vrmonitor_russian.txt
@@ -1122,10 +1122,10 @@
 "[english]Settings_Audio_Header"	"Audio Settings"
 "Settings_Audio_On"	"Когда SteamVR используется..."
 "[english]Settings_Audio_On"	"When using SteamVR..."
-"Settings_Audio_AudioPlay"	"Задать устройство воспроизведения"
-"[english]Settings_Audio_AudioPlay"	"Set Playback device to"
-"Settings_Audio_AudioRecord"	"Задать устройство записи"
-"[english]Settings_Audio_AudioRecord"	"Set Record device to"
+"Settings_Audio_AudioPlay"	"Устройство вывода звука"
+"[english]Settings_Audio_AudioPlay"	"Audio output device"
+"Settings_Audio_AudioRecord"	"Устройство ввода звука"
+"[english]Settings_Audio_AudioRecord"	"Audio input device"
 "Settings_Audio_Off"	"Когда SteamVR не используется..."
 "[english]Settings_Audio_Off"	"When not use SteamVR..."
 "Settings_Audio_HDMIGain"	"Включить функцию снижения усиления на звук с HDMI у VIVE"
@@ -1990,7 +1990,7 @@
 "[english]DismissableWarning_BluetoothLinkServiceError"	"Bluetooth service not found (0x0400)"
 "DismissableWarning_BasestationsSyncOnBeamChannelConflict"	"Конфликт каналов при синхронизации (0x400000)"
 "[english]DismissableWarning_BasestationsSyncOnBeamChannelConflict"	"Sync on Beam Channel Conflict (0x400000)"
-"Settings_PowerOffBaseStations_Explanation"	"В режиме управления питанием базовые станции уходят в спящий режим, если SteamVR не используется 60 секунд, и пробуждаются при запуске SteamVR. Не рекомендуем включать эту настройку в общем пространстве для нескольких пользователей SteamVR."
+"Settings_PowerOffBaseStations_Explanation"	"В режиме управления питанием базовые станции уходят в спящий режим, если SteamVR не используется 60 секунд, и пробуждаются при запуске SteamVR. Не рекомендуем включать эту настройку в пространстве, общем для нескольких пользователей SteamVR."
 "[english]Settings_PowerOffBaseStations_Explanation"	"Power managed Base Stations go into standby mode after 60 seconds when SteamVR is not in use and wake up when SteamVR starts. This setting is not recommended for shared tracking spaces with multiple SteamVR users."
 "Settings_BaseStationsWakeUpAll_Explanation"	"Активирует все базовые станции, участвующие в удалённом управлении питанием."
 "[english]Settings_BaseStationsWakeUpAll_Explanation"	"Wakes all base stations participating in remote power management."
@@ -2318,7 +2318,7 @@
 "[english]Settings_Advanced_Restart"	"<i>This pending change will take effect once you <a href='vrmonitor://restartsystem'><span style='color:white;'>Restart SteamVR</span></a></i>"
 "BluetoothControllerStatus_NoBluetoothDeviceUpdateNeeded"	"Совместимость с Bluetooth не обнаружена. Чтобы включить эту функцию, необходимо обновить устройство. Наведите указатель на иконку шлема и выберите «Обновить устройство»."
 "[english]BluetoothControllerStatus_NoBluetoothDeviceUpdateNeeded"	"Bluetooth capability not detected. A device update is needed to enable this feature. Hover over the headset icon and select Update Device."
-"BS_PowerManagement_Enable_Warning"	"<font color=#ffffff>* НЕ РЕКОМЕНДУЕТСЯ использовать в общем пространстве для нескольких пользователей SteamVR.</font>"
+"BS_PowerManagement_Enable_Warning"	"<font color=#ffffff>* НЕ РЕКОМЕНДУЕТСЯ использовать в пространстве, общем для нескольких пользователей SteamVR.</font>"
 "[english]BS_PowerManagement_Enable_Warning"	"<font color=#ffffff>* NOT RECOMMENDED for shared tracking spaces with multiple SteamVR users.</font>"
 "BS_PowerManagement_ObservedInTracking"	"Замечено в предыдущей сессии трекинга."
 "[english]BS_PowerManagement_ObservedInTracking"	"Observed in a prior tracking session."
@@ -2576,5 +2576,31 @@
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_USBConnected"	"An unexpected USB connection to the Base Station is preventing the wireless update.<br><br><font color=#aaaa00>Please unplug the USB cable that is plugged into the Base Station.</font>"
 "FirmwareWizard_Failure_WirelessUpdateBaseStuckInDFU"	"Непредвиденное USB-подключение к базовой станции не даёт завершить обновление по беспроводной сети.<ul><li><font color=#aaaa00>Отключите кабель питания базовой станции.<li>Отключите USB-кабель, вставленный в базовую станцию.<li>Подключите кабель питания базовой станции.<li>Подождите 30 секунд, пока базовая станция завершает внутреннее обновление.</font></ul><br>Во время внутреннего обновления индикаторы базовой станции могут не светиться.<br>Во время обновления не отключайте базовую станцию от питания и ничего к ней не подключайте."
 "[english]FirmwareWizard_Failure_WirelessUpdateBaseStuckInDFU"	"An unexpected USB connection to the Base Station is preventing the wireless update from finishing.<ul><li><font color=#aaaa00>Unplug the Base Station's power cable.<li>Unplug the USB cable that is plugged into the Base Station.<li>Replug only the Base Station's power cable.<li>Wait 30 seconds for the Base Station to finish its internal update.</font></ul><br>The Base Station LED may be off during its internal update.<br>Do not unplug or make any other connections to the Base Station during its update."
+"Settings_Audio_Device_HMD"	"VR-шлем"
+"[english]Settings_Audio_Device_HMD"	"VR Headset"
+"Settings_Audio_Device_Other"	"Другое"
+"[english]Settings_Audio_Device_Other"	"Other"
+"Settings_Audio_Default"	"По умолчанию"
+"[english]Settings_Audio_Default"	"Default"
+"Settings_Audio_AudioMirrorEnable"	"Включить дублирование звука"
+"[english]Settings_Audio_AudioMirrorEnable"	"Enable audio mirror"
+"FirmwareWizard_UpdateBasestationWireless_Fail_BaseStuckInDFU"	"Непредвиденное USB-подключение к базовой станции не даёт завершить обновление по беспроводной сети.<ul><li><font color=#aaaa00>Отключите кабель питания базовой станции.<li>Отключите USB-кабель, вставленный в базовую станцию.<li>Подключите кабель питания базовой станции.<li>Подождите 30 секунд, пока базовая станция завершает внутреннее обновление.</font></ul><br>Во время внутреннего обновления индикаторы базовой станции могут не светиться.<br>Во время обновления не отключайте базовую станцию от питания и ничего к ней не подключайте."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_BaseStuckInDFU"	"An unexpected USB connection to the Base Station is preventing the wireless update from finishing.<ul><li><font color=#aaaa00>Unplug the Base Station's power cable.<li>Unplug the USB cable that is plugged into the Base Station.<li>Replug only the Base Station's power cable.<li>Wait 30 seconds for the Base Station to finish its internal update.</font></ul><br>The Base Station LED may be off during its internal update.<br>Do not unplug or make any other connections to the Base Station during its update."
+"FirmwareWizard_UpdateBasestationWireless_Fail_BaseNeedsPowerCycle"	"Чтобы продолжить обновление, требуется перезапустить эту базовую станцию.<br><br><font color=#aaaa00>Пожалуйста, отсоедините, а затем снова подключите кабель питания базовой станции.</font>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_BaseNeedsPowerCycle"	"This Base Station needs to be power cycled to continue the update.<br><br><font color=#aaaa00>Please unplug and then replug the Base Station's power cable before continuing.</font>"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox_BS20"	"Если сбои обновления продолжаются:<ul><li>Выйдите из SteamVR;<li>Отключите от базовой станции все USB-кабели;<li>НЕ ПОДКЛЮЧАЙТЕ USB-кабели к базовой станции;<li>Отключите от питания коммуникационный модуль и подключите его обратно;<li>Отключите от питания базовую станцию и подключите её обратно;<li>Запустите SteamVR и повторите попытку.</ul>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox_BS20"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug any USB cable connected to the Base Station.<li>Do NOT connect USB to the Base Station.<li>Unplug and replug the Link Box power cable.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR and try again.</ul>"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_BS20"	"Если сбои обновления продолжаются:<ul><li>Выйдите из SteamVR;<li>Отключите от базовой станции все USB-кабели;<li>НЕ ПОДКЛЮЧАЙТЕ USB-кабели к базовой станции;<li>Отключите от питания базовую станцию и подключите её обратно;<li>Запустите SteamVR и повторите попытку.</ul>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_BS20"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug any USB cable connected to the Base Station.<li>Do NOT connect USB to the Base Station.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR and try again.</ul>"
+"BS_PromotePowerManagement_Title"	"SteamVR"
+"[english]BS_PromotePowerManagement_Title"	"SteamVR"
+"BS_PromotePowerManagement_Explanation"	"SteamVR может управлять питанием базовых станций.<br><br>В режиме управления питанием базовые станции переходят в режим ожидания, если SteamVR не используется, и выходят из него при запуске SteamVR.<br>"
+"[english]BS_PromotePowerManagement_Explanation"	"SteamVR can power manage your Base Stations.<br><br>Power managed Base Stations go into standby mode when SteamVR is not in use and wake up again when SteamVR starts.<br>"
+"BS_PromotePowerManagement_Enable"	"Включить управление питанием базовых станций *"
+"[english]BS_PromotePowerManagement_Enable"	"Enable Base Station Power Management *"
+"BS_PromotePowerManagement_Explanation2"	"<br><font color=#ffffff>* НЕ РЕКОМЕНДУЕТСЯ использовать в пространстве, общем для нескольких пользователей SteamVR.</font>"
+"[english]BS_PromotePowerManagement_Explanation2"	"<br><font color=#ffffff>* NOT RECOMMENDED for shared tracking spaces with multiple SteamVR users.</font>"
+"BS_PromotePowerManagement_ExitNow"	"Выйти (%1)"
+"[english]BS_PromotePowerManagement_ExitNow"	"Exit Now (%1)"
 }
 }
