--- a/content/vrmonitor/translations/vrmonitor_spanish.txt
+++ b/content/vrmonitor/translations/vrmonitor_spanish.txt
@@ -185,7 +185,7 @@
 "[english]MenuAction_Help"	"Help"
 "MenuAction_SteamVRWebsite"	"Soporte de SteamVR"
 "[english]MenuAction_SteamVRWebsite"	"SteamVR Support"
-"MenuAction_SteamVRCommunity"	"Comunidad de SteamVR"
+"MenuAction_SteamVRCommunity"	"Comunidad SteamVR"
 "[english]MenuAction_SteamVRCommunity"	"SteamVR Community"
 "MenuAction_SteamVRHardwareDiscussions"	"Discusiones sobre hardware de SteamVR"
 "[english]MenuAction_SteamVRHardwareDiscussions"	"SteamVR Hardware Discussions"
@@ -468,7 +468,7 @@
 "[english]Advanced_PerfHeuristicActive"	"Perf Heuristic Active"
 "Advanced_NotifyInHMD"	"Notificar en el visor"
 "[english]Advanced_NotifyInHMD"	"Notify in Headset"
-"Advanced_NotifyOnlyOnce"	"Notificar sólo una vez"
+"Advanced_NotifyOnlyOnce"	"Notificar solo una vez"
 "[english]Advanced_NotifyOnlyOnce"	"Notify Only Once"
 "Advanced_AllowSavingOfTimingInfo"	"Permitir guardar información de sincronización"
 "[english]Advanced_AllowSavingOfTimingInfo"	"Allow saving of timing info"
@@ -1112,10 +1112,10 @@
 "[english]Settings_Audio_Header"	"Audio Settings"
 "Settings_Audio_On"	"Al usar SteamVR..."
 "[english]Settings_Audio_On"	"When using SteamVR..."
-"Settings_Audio_AudioPlay"	"Dispositivo de reproducción:"
-"[english]Settings_Audio_AudioPlay"	"Set Playback device to"
-"Settings_Audio_AudioRecord"	"Dispositivo de grabación:"
-"[english]Settings_Audio_AudioRecord"	"Set Record device to"
+"Settings_Audio_AudioPlay"	"Dispositivo de salida de audio"
+"[english]Settings_Audio_AudioPlay"	"Audio output device"
+"Settings_Audio_AudioRecord"	"Dispositivo de entrada de audio"
+"[english]Settings_Audio_AudioRecord"	"Audio input device"
 "Settings_Audio_Off"	"Al salir de SteamVR..."
 "[english]Settings_Audio_Off"	"When not use SteamVR..."
 "Settings_Audio_HDMIGain"	"Activar la reducción de ganancia en el audio HDMI de VIVE"
@@ -1148,7 +1148,7 @@
 "[english]Settings_Bluetooth_Driver_Install"	"Install Bluetooth Driver"
 "Settings_PowerOffControllers_Info"	" "
 "[english]Settings_PowerOffControllers_Info"	" "
-"Settings_PowerOffBaseStations_Text"	"Activar la administración de energía de la estación base"
+"Settings_PowerOffBaseStations_Text"	"Activar administración de energía de las estaciones base"
 "[english]Settings_PowerOffBaseStations_Text"	"Enable Base Station Power Management"
 "Settings_PowerOffBaseStations_Info"	"Bluetooth Link debe estar instalado para activar esta función."
 "[english]Settings_PowerOffBaseStations_Info"	"Bluetooth Link must be installed to enable this feature."
@@ -2560,5 +2560,31 @@
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_USBConnected"	"An unexpected USB connection to the Base Station is preventing the wireless update.<br><br><font color=#aaaa00>Please unplug the USB cable that is plugged into the Base Station.</font>"
 "FirmwareWizard_Failure_WirelessUpdateBaseStuckInDFU"	"Una conexión USB inesperada a la estación base impide que finalice la actualización inalámbrica.<ul><li><font color=#aaaa00>Desenchufa el cable de alimentación de la estación base.<li>Desenchufa el cable USB que está conectado a la estación base.<li>Vuelve a enchufar solo el cable de alimentación de la estación base.<li>Espera 30 segundos para que la estación base termine su actualización interna.</font></ul><br>El LED de la estación base puede estar apagado durante su actualización interna.<br>No desconectes ni realices ninguna otra conexión a la estación base durante su actualización."
 "[english]FirmwareWizard_Failure_WirelessUpdateBaseStuckInDFU"	"An unexpected USB connection to the Base Station is preventing the wireless update from finishing.<ul><li><font color=#aaaa00>Unplug the Base Station's power cable.<li>Unplug the USB cable that is plugged into the Base Station.<li>Replug only the Base Station's power cable.<li>Wait 30 seconds for the Base Station to finish its internal update.</font></ul><br>The Base Station LED may be off during its internal update.<br>Do not unplug or make any other connections to the Base Station during its update."
+"Settings_Audio_Device_HMD"	"Visor de RV"
+"[english]Settings_Audio_Device_HMD"	"VR Headset"
+"Settings_Audio_Device_Other"	"Otro"
+"[english]Settings_Audio_Device_Other"	"Other"
+"Settings_Audio_Default"	"Predeterminados"
+"[english]Settings_Audio_Default"	"Default"
+"Settings_Audio_AudioMirrorEnable"	"Activar duplicación de audio"
+"[english]Settings_Audio_AudioMirrorEnable"	"Enable audio mirror"
+"FirmwareWizard_UpdateBasestationWireless_Fail_BaseStuckInDFU"	"Una conexión USB inesperada a la estación base impide que finalice la actualización inalámbrica.<ul><li><font color=#aaaa00>Desenchufa el cable de alimentación de la estación base.<li>Desenchufa el cable USB que está conectado a la estación base.<li>Vuelve a enchufar solo el cable de alimentación de la estación base.<li>Espera 30 segundos para que la estación base termine su actualización interna.</font></ul><br>El LED de la estación base puede estar apagado durante su actualización interna.<br>No desconectes ni realices ninguna otra conexión a la estación base durante su actualización."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_BaseStuckInDFU"	"An unexpected USB connection to the Base Station is preventing the wireless update from finishing.<ul><li><font color=#aaaa00>Unplug the Base Station's power cable.<li>Unplug the USB cable that is plugged into the Base Station.<li>Replug only the Base Station's power cable.<li>Wait 30 seconds for the Base Station to finish its internal update.</font></ul><br>The Base Station LED may be off during its internal update.<br>Do not unplug or make any other connections to the Base Station during its update."
+"FirmwareWizard_UpdateBasestationWireless_Fail_BaseNeedsPowerCycle"	"Esta estación base debe apagarse y volver a encenderse para continuar la actualización.<br><br><font color=#aaaa00>Desenchufa y vuelve a enchufar el cable de alimentación de la estación base para continuar.</font>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_BaseNeedsPowerCycle"	"This Base Station needs to be power cycled to continue the update.<br><br><font color=#aaaa00>Please unplug and then replug the Base Station's power cable before continuing.</font>"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox_BS20"	"Si la actualización de este dispositivo sigue fallando sin progresar: <ul><li>Sal de SteamVR.<li>Desenchufa cualquier cable USB conectado a la estación base.<li>NO conectes el USB a la estación base.<li>Desenchufa y vuelve a enchufar el cable de alimentación de la Link Box.<li>Desenchufa y vuelve a enchufar el cable de alimentación de la estación base.<li>Inicia SteamVR e inténtalo de nuevo.</ul>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox_BS20"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug any USB cable connected to the Base Station.<li>Do NOT connect USB to the Base Station.<li>Unplug and replug the Link Box power cable.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR and try again.</ul>"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_BS20"	"Si la actualización de este dispositivo sigue fallando sin progresar: <ul><li>Sal de SteamVR.<li>Desenchufa cualquier cable USB conectado a la estación base.<li>NO conectes el USB a la estación base.<li>Desenchufa y vuelve a enchufar el cable de alimentación de la estación base.<li>Inicia SteamVR e inténtalo de nuevo.</ul>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_BS20"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug any USB cable connected to the Base Station.<li>Do NOT connect USB to the Base Station.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR and try again.</ul>"
+"BS_PromotePowerManagement_Title"	"SteamVR"
+"[english]BS_PromotePowerManagement_Title"	"SteamVR"
+"BS_PromotePowerManagement_Explanation"	"SteamVR puede administrar la energía de tus estaciones base.<br><br>Las estaciones base con administración de energía se ponen en modo de espera cuando SteamVR no está en uso y se reactivan al iniciar SteamVR.<br>"
+"[english]BS_PromotePowerManagement_Explanation"	"SteamVR can power manage your Base Stations.<br><br>Power managed Base Stations go into standby mode when SteamVR is not in use and wake up again when SteamVR starts.<br>"
+"BS_PromotePowerManagement_Enable"	"Activar administración de energía de las estaciones base *"
+"[english]BS_PromotePowerManagement_Enable"	"Enable Base Station Power Management *"
+"BS_PromotePowerManagement_Explanation2"	"<br><font color=#ffffff>* NO SE RECOMIENDA para espacios de seguimiento compartidos con varios usuarios de SteamVR.</font>"
+"[english]BS_PromotePowerManagement_Explanation2"	"<br><font color=#ffffff>* NOT RECOMMENDED for shared tracking spaces with multiple SteamVR users.</font>"
+"BS_PromotePowerManagement_ExitNow"	"Salir ahora (%1)"
+"[english]BS_PromotePowerManagement_ExitNow"	"Exit Now (%1)"
 }
 }
