--- a/content/vrmonitor/translations/vrmonitor_thai.txt
+++ b/content/vrmonitor/translations/vrmonitor_thai.txt
@@ -1116,9 +1116,9 @@
 "Settings_Audio_On"	"เมื่อกำลังใช้ SteamVR..."
 "[english]Settings_Audio_On"	"When using SteamVR..."
 "Settings_Audio_AudioPlay"	"กำหนดอุปกรณ์ระบบเสียงเป็น"
-"[english]Settings_Audio_AudioPlay"	"Set Playback device to"
-"Settings_Audio_AudioRecord"	"กำหนดอุปกรณ์บันทึกเสียงเป็น"
-"[english]Settings_Audio_AudioRecord"	"Set Record device to"
+"[english]Settings_Audio_AudioPlay"	"Audio output device"
+"Settings_Audio_AudioRecord"	"อุปกรณ์รับข้อมูลเสียง"
+"[english]Settings_Audio_AudioRecord"	"Audio input device"
 "Settings_Audio_Off"	"เมื่อกำลังไม่ใช้ SteamVR..."
 "[english]Settings_Audio_Off"	"When not use SteamVR..."
 "Settings_Audio_HDMIGain"	"เปิดการใช้งานการลดทอนค่า Gain บนสัญญาณเสียง HDMI ของ Vive"
@@ -2475,10 +2475,24 @@
 "[english]BS20_ConfigureChannel_Description"	"Select an unused channel for this Base Station to avoid potential tracking conflicts."
 "BS20_ConfigureChannel_InUseByPrefix"	"ถูกใช้ล่าสุดโดย:"
 "[english]BS20_ConfigureChannel_InUseByPrefix"	"Currently used by:"
+"BS20_ConfigureChannel_Legend"	"แสดงช่องสัญญาณที่ถูกใช้โดยสถานีฐานอื่นในคลื่นวิทยุภายในระยะใกล้เคียง"
+"[english]BS20_ConfigureChannel_Legend"	"Denotes a channel used by other Base Stations in radio proximity."
 "BS20_ConfigureChannel_AutomaticConfiguration"	"การกำหนดค่าอัตโนมัติ"
 "[english]BS20_ConfigureChannel_AutomaticConfiguration"	"Automatic Configuration"
 "BS20_ConfigureChannel_AutoConfig_NoChannelConflictsFound"	"ไม่มีความขัดแย้งของช่องสัญญาณ"
 "[english]BS20_ConfigureChannel_AutoConfig_NoChannelConflictsFound"	"There are no channel conflicts."
+"BS20_ConfigureChannel_AutoConfig_NoFreeChannels"	"ไม่มีช่องสัญญาณว่างให้แก้ไข %1 ความขัดแย้งของช่องสัญญาณที่อาจเกิดขึ้นได้ คุณอาจต้องดำเนินการกำหนดค่าช่องสัญญาณด้วยตนเอง"
+"[english]BS20_ConfigureChannel_AutoConfig_NoFreeChannels"	"There are no free channels to resolve %1 potential channel conflicts. You may need to manually configure channels."
+"BS20_ConfigureChannel_AutoConfig_NotEnoughFreeChannels"	"มีช่องสัญญาณว่างเพียงพอให้แก้ไขความขัดแย้งของช่องสัญญาณที่อาจเกิดขึ้นได้แค่ %1 ใน %2 เท่านั้น ต้องการดำเนินการและแก้ไขความขัดแย้งต่อไปหรือไม่?"
+"[english]BS20_ConfigureChannel_AutoConfig_NotEnoughFreeChannels"	"There are only enough free channels to resolve %1 out of %2 potential channel conflicts. Continue and resolve conflicts?"
+"BS20_ConfigureChannel_AutoConfigContinue"	"มี %1 ความขัดแย้งของช่องสัญญาณที่อาจเกิดขึ้นได้และสามารถแก้ไขได้โดยอัตโนมัติด้วยการกำหนดช่องสัญญาณอีกครั้ง ต้องการดำเนินการและแก้ไขความขัดแย้งต่อไปหรือไม่?"
+"[english]BS20_ConfigureChannel_AutoConfigContinue"	"There are %1 potential channel conflicts that can be automatically resolved by re-assigning their channels. Continue and resolve conflicts?"
+"BS20_ConfigureChannel_AutoConfig_SuccessfulCompletion"	"การกำหนดค่าอัตโนมัติเสร็จสมบูรณ์แล้ว\n\nไม่มีความขัดแย้งของช่องสัญญาณ"
+"[english]BS20_ConfigureChannel_AutoConfig_SuccessfulCompletion"	"Automatic Configuration completed.\n\nThere are no channel conflicts."
+"BS20_ConfigureChannel_AutoConfig_Incomplete"	"การกำหนดค่าอัตโนมัติเสร็จสมบูรณ์แล้ว\n\nมี %1 ความขัดแย้งของช่องสัญญาณคงเหลืออยู่ คุณอาจต้องดำเนินการกำหนดค่าช่องสัญญาณด้วยตนเอง"
+"[english]BS20_ConfigureChannel_AutoConfig_Incomplete"	"Automatic Configuration completed.\n\nThere are %1 remaining potential channel conflicts. You may need to manually configure channels."
+"BS20_ConfigureChannel_AutoConfig_UnknownChannels"	"มี %1 สถานีฐานที่ไม่สามารถกำหนดช่องสัญญาณได้ ซึ่งอาจส่งผลให้มีความขัดแย้งของช่องสัญญาณที่อาจเกิดขึ้นได้\n"
+"[english]BS20_ConfigureChannel_AutoConfig_UnknownChannels"	"There are %1 Base Stations whose channels could not be determined that may result in potential channel conflicts.\n"
 "BS20_ConfigureChannel_ChannelConfigurationFailure"	"%1 ล้มเหลวในการยอมรับการกำหนดค่าช่องสัญญาณที่จำเป็น"
 "[english]BS20_ConfigureChannel_ChannelConfigurationFailure"	"%1 failed to accept the requested channel configuration."
 "BS20_ConfigureChannel_ScanForMore"	"สแกนเพิ่มเติม"
@@ -2491,8 +2505,22 @@
 "[english]BS20_ConfigureChannel_Channel"	"Channel: %1"
 "BS20_ConfigureChannel_ConnectionFailure"	"%1 ล้มเหลวในการเชื่อมต่อ"
 "[english]BS20_ConfigureChannel_ConnectionFailure"	"%1 failed to connect."
+"BS20_ConfigureChannel_ConflictWarning"	"%1 กำลังถูกใช้ช่องสัญญาณเดียวกันกับสถานีฐานอื่น"
+"[english]BS20_ConfigureChannel_ConflictWarning"	"%1 is using the same channel as another Base Station."
+"BS20_ConfigureChannel_FailedToConnectRetry"	"%1 ล้มเหลวในการเชื่อมต่อ กรุณาคลิก 'ลองใหม่' เพื่อลองอีกครั้ง"
+"[english]BS20_ConfigureChannel_FailedToConnectRetry"	"%1 failed to connect. Click 'Retry' to try again."
+"BS20_ConfigureChannel_ConflictOnChannel"	"%1 ความขัดแย้งของช่องสัญญาณที่อาจเกิดขึ้นได้"
+"[english]BS20_ConfigureChannel_ConflictOnChannel"	"Potential conflict on Channel %1"
 "BS20_ConfigureChannel_NoConflictOnChannel"	"ไม่มีความขัดแย้งบนช่องสัญญาณ %1"
 "[english]BS20_ConfigureChannel_NoConflictOnChannel"	"No conflict on Channel %1"
+"BS20_ConfigureChannel_ProgressScanComplete"	"สแกนเสร็จสมบูรณ์แล้ว\n\nคลิกลิงก์ช่องสัญญาณเพื่อเปลี่ยน"
+"[english]BS20_ConfigureChannel_ProgressScanComplete"	"Scan Completed.\n\nClick on a channel link to change it."
+"BS20_ConfigureChannel_ProgressScanNoStationsFound"	"สแกนเสร็จสมบูรณ์แล้ว\n\nไม่มีสถานีฐาน 2.0 ส่งสัญญาณในบริเวณใกล้เคียงกับคุณ"
+"[english]BS20_ConfigureChannel_ProgressScanNoStationsFound"	"Scan Completed.\n\nThere are no broadcasting 2.0 Base Stations within your proximity."
+"BS20_ConfigureChannel_ProgressScanning"	"กำลังสแกนหาสถานีฐาน...\n\nเวลาคงเหลือ %1 วินาที"
+"[english]BS20_ConfigureChannel_ProgressScanning"	"Scanning For Base Stations...\n\n%1 Seconds Remaining."
+"BS20_ConfigureChannel_ProgressWritingChannel"	"\nกำลังเขียนช่องสัญญาณ...\n"
+"[english]BS20_ConfigureChannel_ProgressWritingChannel"	"\nWriting Channel...\n"
 "BS20_ConfigureChannel_RSSI"	"RSSI: %1"
 "[english]BS20_ConfigureChannel_RSSI"	"RSSI: %1"
 "Key_Escape_Abbreviation"	"ESC"
@@ -2505,6 +2533,10 @@
 "[english]HeadsetView_PressKeyToExit"	"Press %1 to exit Full Screen"
 "HeadsetView_FullscreenButtonLabel"	"เต็มหน้าจอ"
 "[english]HeadsetView_FullscreenButtonLabel"	"Full Screen"
+"HeadsetView_DockButtonLabel"	"ตรึงมุมมอง VR"
+"[english]HeadsetView_DockButtonLabel"	"Dock VR View"
+"HeadsetView_UndockButtonLabel"	"เลิกตรึงมุมมอง VR"
+"[english]HeadsetView_UndockButtonLabel"	"Undock VR View"
 "HeadsetView_CloseButtonLabel"	"ปิด"
 "[english]HeadsetView_CloseButtonLabel"	"Close"
 "HeadsetView_EyeMode_Both"	"ตาทั้งสองข้าง"
@@ -2521,5 +2553,37 @@
 "[english]HeadsetView_ViewMode_Center"	"Center View"
 "HeadsetView_DebugCommands"	"เปิดคำสั่งดีบัก"
 "[english]HeadsetView_DebugCommands"	"Open Debug Commands"
+"HeadsetView_HideButtonLabel"	"ซ่อนมุมมอง VR"
+"[english]HeadsetView_HideButtonLabel"	"Hide VR View"
+"Settings_PerApplication_Reprojection_Header"	"รีโปรเจ็กชัน"
+"[english]Settings_PerApplication_Reprojection_Header"	"Reprojection"
+"Settings_PerApplication_Reprojection_Checkbox"	"ใช้งานโหมดรีโปรเจ็กชันดั้งเดิม"
+"[english]Settings_PerApplication_Reprojection_Checkbox"	"Use legacy reprojection mode"
+"Settings_PerApplication_Reprojection_Description"	"การเลือกตัวเลือกนี้จะปิดการใช้งานรีโปรเจกชันแบบอะซิงโครนัสสำหรับรายการนี้"
+"[english]Settings_PerApplication_Reprojection_Description"	"Checking this option will disable asynchronous reprojection for this title."
+"FirmwareWizard_UpdateBasestationWireless_Fail_USBConnected"	"มีการเชื่อมต่อ USB อยู่กับสถานีฐานโดยไม่คาดคิด ซึ่งขัดขวางการอัปเดตไร้สายอยู่ในขณะนี้<br><br><font color=#aaaa00>กรุณาถอดสายเคเบิล USB ออกจากสถานีฐาน</font>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_USBConnected"	"An unexpected USB connection to the Base Station is preventing the wireless update.<br><br><font color=#aaaa00>Please unplug the USB cable that is plugged into the Base Station.</font>"
+"FirmwareWizard_Failure_WirelessUpdateBaseStuckInDFU"	"มีการเชื่อมต่อ USB กับสถานีฐานโดยไม่คาดคิด ซึ่งขัดขวางการอัปเดตไร้สายไม่ให้สำเร็จอยู่ในขณะนี้<ul><li><font color=#aaaa00>ถอดสายไฟของสถานีฐาน<li>ถอดสายเคเบิล USB ที่เสียบอยู่กับสถานีฐาน <li>เสียบเฉพาะปลั๊กสายไฟของสถานีฐานอีกครั้ง<li>รอ 30 วินาทีเพื่อให้สถานีฐานทำการอัปเดตภายในจนเสร็จสมบูรณ์</font></ul><br>ไฟ LED ของสถานีฐานอาจปิดอยู่ในระหว่างการอัปเดตภายใน<br>กรุณาอย่าถอดสายหรือเสียบสายใด ๆ เข้ากับสถานีฐานในระหว่างการอัปเดตนี้"
+"[english]FirmwareWizard_Failure_WirelessUpdateBaseStuckInDFU"	"An unexpected USB connection to the Base Station is preventing the wireless update from finishing.<ul><li><font color=#aaaa00>Unplug the Base Station's power cable.<li>Unplug the USB cable that is plugged into the Base Station.<li>Replug only the Base Station's power cable.<li>Wait 30 seconds for the Base Station to finish its internal update.</font></ul><br>The Base Station LED may be off during its internal update.<br>Do not unplug or make any other connections to the Base Station during its update."
+"Settings_Audio_Device_HMD"	"เครื่องสวมศีรษะ VR"
+"[english]Settings_Audio_Device_HMD"	"VR Headset"
+"Settings_Audio_Device_Other"	"อื่น ๆ"
+"[english]Settings_Audio_Device_Other"	"Other"
+"Settings_Audio_Default"	"ค่าเริ่มต้น"
+"[english]Settings_Audio_Default"	"Default"
+"Settings_Audio_AudioMirrorEnable"	"เปิดการใช้งานการส่งเสียงเสมือน"
+"[english]Settings_Audio_AudioMirrorEnable"	"Enable audio mirror"
+"FirmwareWizard_UpdateBasestationWireless_Fail_BaseStuckInDFU"	"มีการเชื่อมต่อ USB กับสถานีฐานโดยไม่คาดคิด ซึ่งขัดขวางการอัปเดตไร้สายไม่ให้สำเร็จอยู่ในขณะนี้<ul><li><font color=#aaaa00>ถอดสายไฟของสถานีฐาน<li>ถอดสายเคเบิล USB ที่เสียบอยู่กับสถานีฐาน <li>เสียบเฉพาะปลั๊กสายไฟของสถานีฐานอีกครั้ง<li>รอ 30 วินาทีเพื่อให้สถานีฐานทำการอัปเดตภายในจนเสร็จสมบูรณ์</font></ul><br>ไฟ LED ของสถานีฐานอาจปิดอยู่ในระหว่างการอัปเดตภายใน<br>กรุณาอย่าถอดสายหรือเสียบสายใด ๆ เข้ากับสถานีฐานในระหว่างการอัปเดตนี้"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_BaseStuckInDFU"	"An unexpected USB connection to the Base Station is preventing the wireless update from finishing.<ul><li><font color=#aaaa00>Unplug the Base Station's power cable.<li>Unplug the USB cable that is plugged into the Base Station.<li>Replug only the Base Station's power cable.<li>Wait 30 seconds for the Base Station to finish its internal update.</font></ul><br>The Base Station LED may be off during its internal update.<br>Do not unplug or make any other connections to the Base Station during its update."
+"FirmwareWizard_UpdateBasestationWireless_Fail_BaseNeedsPowerCycle"	"สถานีฐานนี้จำเป็นต้องถูกปิดและเปิดใหม่เพื่อดำเนินการอัปเดต<br><br><font color=#aaaa00>กรุณาถอดสายไฟและเสียบสายไฟของสถานีฐานใหม่อีกครั้งก่อนดำเนินการต่อ</font>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_BaseNeedsPowerCycle"	"This Base Station needs to be power cycled to continue the update.<br><br><font color=#aaaa00>Please unplug and then replug the Base Station's power cable before continuing.</font>"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox_BS20"	"หากการอัปเดตอุปกรณ์นี้ยังคงล้มเหลวต่อไปโดยไม่มีความคืบหน้า...<ul><li>ออกจาก SteamVR<li>ถอดสายเคเบิล USB ใด ๆ ที่เสียบอยู่กับสถานีฐานออกให้หมด<li>ไม่เสียบ USB เข้ากับสถานีฐาน<li>ถอดสายไฟของกล่องลิงก์ออกและเสียบสายไฟใหม่อีกครั้ง<li>ถอดสายไฟสถานีฐานออกและเสียบสายไฟใหม่อีกครั้ง<li>เปิด SteamVR และลองใหม่อีกครั้ง</ul>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox_BS20"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug any USB cable connected to the Base Station.<li>Do NOT connect USB to the Base Station.<li>Unplug and replug the Link Box power cable.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR and try again.</ul>"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_BS20"	"หากการอัปเดตอุปกรณ์นี้ยังคงล้มเหลวต่อไปโดยไม่มีความคืบหน้า...<ul><li>ออกจาก SteamVR<li>ถอดสายเคเบิล USB ใด ๆ ที่เสียบอยู่กับสถานีฐานออกให้หมด<li>ไม่เสียบ USB เข้ากับสถานีฐาน<li>ถอดสายไฟสถานีฐานออกและเสียบสายไฟใหม่อีกครั้ง<li>เปิด SteamVR และลองใหม่อีกครั้ง</ul>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_BS20"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug any USB cable connected to the Base Station.<li>Do NOT connect USB to the Base Station.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR and try again.</ul>"
+"BS_PromotePowerManagement_Title"	"SteamVR"
+"[english]BS_PromotePowerManagement_Title"	"SteamVR"
+"BS_PromotePowerManagement_ExitNow"	"ออกจากระบบเดี๋ยวนี้ (%1)"
+"[english]BS_PromotePowerManagement_ExitNow"	"Exit Now (%1)"
 }
 }
