--- a/content/vrmonitor/translations/vrmonitor_turkish.txt
+++ b/content/vrmonitor/translations/vrmonitor_turkish.txt
@@ -1119,10 +1119,10 @@
 "[english]Settings_Audio_Header"	"Audio Settings"
 "Settings_Audio_On"	"SteamVR'ı kullanırken..."
 "[english]Settings_Audio_On"	"When using SteamVR..."
-"Settings_Audio_AudioPlay"	"Ayarlanacak Kayıttan Yürütme aygıtı:"
-"[english]Settings_Audio_AudioPlay"	"Set Playback device to"
-"Settings_Audio_AudioRecord"	"Ayarlanacak Kayıt aygıtı:"
-"[english]Settings_Audio_AudioRecord"	"Set Record device to"
+"Settings_Audio_AudioPlay"	"Ses çıkış aygıtı"
+"[english]Settings_Audio_AudioPlay"	"Audio output device"
+"Settings_Audio_AudioRecord"	"Ses giriş aygıtı"
+"[english]Settings_Audio_AudioRecord"	"Audio input device"
 "Settings_Audio_Off"	"SteamVR kullanılmazken..."
 "[english]Settings_Audio_Off"	"When not use SteamVR..."
 "Settings_Audio_HDMIGain"	"VIVE HDMI Ses çıktısındaki Kazanç azaltmasını etkinleştir"
@@ -2584,5 +2584,31 @@
 <br>Ana istasyon LED'i dahili güncelleme boyunca kapalı olabilir.<br>
 Güncelleme esnasında ana istasyondan herhangi bir şeyi çıkarmayın ya da ana istasyona yeni bir şey takmayın."
 "[english]FirmwareWizard_Failure_WirelessUpdateBaseStuckInDFU"	"An unexpected USB connection to the Base Station is preventing the wireless update from finishing.<ul><li><font color=#aaaa00>Unplug the Base Station's power cable.<li>Unplug the USB cable that is plugged into the Base Station.<li>Replug only the Base Station's power cable.<li>Wait 30 seconds for the Base Station to finish its internal update.</font></ul><br>The Base Station LED may be off during its internal update.<br>Do not unplug or make any other connections to the Base Station during its update."
+"Settings_Audio_Device_HMD"	"VR Başlığı"
+"[english]Settings_Audio_Device_HMD"	"VR Headset"
+"Settings_Audio_Device_Other"	"Diğer"
+"[english]Settings_Audio_Device_Other"	"Other"
+"Settings_Audio_Default"	"Varsayılan"
+"[english]Settings_Audio_Default"	"Default"
+"Settings_Audio_AudioMirrorEnable"	"Ses yansıtmayı etkinleştir"
+"[english]Settings_Audio_AudioMirrorEnable"	"Enable audio mirror"
+"FirmwareWizard_UpdateBasestationWireless_Fail_BaseStuckInDFU"	"Beklenmedik bir USB bağlantısı, Ana İstasyon'un kablosuz güncellemesinin tamamlanmasını engelliyor.<ul><li><font color=#aaaa00>Ana İstasyon'un güç kablosunu çıkarın.<li>Ana İstasyon'a takılı USB kablosunu çıkarın.<li>Ana İstasyon'un güç kablosunu tekrar takın.<li>Ana İstasyon'un dahili güncellemesinin tamamlanması için 30 saniye bekleyin.</font></ul><br>Dahili güncelleme sırasında Ana İstasyon'un LED ışıkları kapalı olabilir.<br>Güncelleme sırasında Ana İstasyon'dan herhangi bir kablo çıkarmayın veya yeni bir bağlantı yapmayın."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_BaseStuckInDFU"	"An unexpected USB connection to the Base Station is preventing the wireless update from finishing.<ul><li><font color=#aaaa00>Unplug the Base Station's power cable.<li>Unplug the USB cable that is plugged into the Base Station.<li>Replug only the Base Station's power cable.<li>Wait 30 seconds for the Base Station to finish its internal update.</font></ul><br>The Base Station LED may be off during its internal update.<br>Do not unplug or make any other connections to the Base Station during its update."
+"FirmwareWizard_UpdateBasestationWireless_Fail_BaseNeedsPowerCycle"	"Bu Ana İstasyon'un güncellemeye devam edebilmesi için güç dönüşümüne ihtiyacı var.<br><br><font color=#aaaa00>Lütfen devam etmeden önce Ana İstasyon'un güç kablosunu çıkarıp tekrar takın.</font>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_BaseNeedsPowerCycle"	"This Base Station needs to be power cycled to continue the update.<br><br><font color=#aaaa00>Please unplug and then replug the Base Station's power cable before continuing.</font>"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox_BS20"	"Eğer bu aygıt, ilerleme olmadan başarısız olmaya devam ediyorsa... <ul><li>SteamVR'dan çıkın.<li>Ana İstasyon'a bağlı tüm USB kablolarını çıkarın.<li>Ana İstasyon'a USB bağlantısı YAPMAYIN.<li>Link Box güç kablosunu çıkarıp tekrar takın.<li>Ana İstasyon'un güç kablosunu çıkarıp tekrar takın.<li>SteamVR'ı başlatıp tekrar deneyin.</ul>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox_BS20"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug any USB cable connected to the Base Station.<li>Do NOT connect USB to the Base Station.<li>Unplug and replug the Link Box power cable.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR and try again.</ul>"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_BS20"	"Eğer bu aygıt, ilerleme olmadan başarısız olmaya devam ediyorsa... <ul><li>SteamVR'dan çıkın.<li>Ana İstasyon'a bağlı tüm USB kablolarını çıkarın.<li>Ana İstasyon'a USB bağlantısı YAPMAYIN.<li>Ana İstasyon'un güç kablosunu çıkarıp tekrar takın.<li>SteamVR'ı başlatıp tekrar deneyin.</ul>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_BS20"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug any USB cable connected to the Base Station.<li>Do NOT connect USB to the Base Station.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR and try again.</ul>"
+"BS_PromotePowerManagement_Title"	"SteamVR"
+"[english]BS_PromotePowerManagement_Title"	"SteamVR"
+"BS_PromotePowerManagement_Explanation"	"SteamVR, ana istasyonlarınızda güç yönetimi yapabilir.<br><br>SteamVR kullanılmadığı zamanlarda güç yönetimi etkin olan ana istasyonlar bekleme moduna girer, SteamVR başladığındaysa tekrar uyanır.<br>"
+"[english]BS_PromotePowerManagement_Explanation"	"SteamVR can power manage your Base Stations.<br><br>Power managed Base Stations go into standby mode when SteamVR is not in use and wake up again when SteamVR starts.<br>"
+"BS_PromotePowerManagement_Enable"	"Ana İstasyon Güç Yönetimini Etkinleştir *"
+"[english]BS_PromotePowerManagement_Enable"	"Enable Base Station Power Management *"
+"BS_PromotePowerManagement_Explanation2"	"<br><font color=#ffffff>* Paylaşılan izleme alanları ile çoklu SteamVR kullanıcıları için ÖNERİLMEZ.</font>"
+"[english]BS_PromotePowerManagement_Explanation2"	"<br><font color=#ffffff>* NOT RECOMMENDED for shared tracking spaces with multiple SteamVR users.</font>"
+"BS_PromotePowerManagement_ExitNow"	"Şimdi Çık (%1)"
+"[english]BS_PromotePowerManagement_ExitNow"	"Exit Now (%1)"
 }
 }
