--- a/content/vrmonitor/translations/vrmonitor_vietnamese.txt
+++ b/content/vrmonitor/translations/vrmonitor_vietnamese.txt
@@ -1094,10 +1094,10 @@
 "[english]Settings_Audio_Header"	"Audio Settings"
 "Settings_Audio_On"	"Khi dùng SteamVR..."
 "[english]Settings_Audio_On"	"When using SteamVR..."
-"Settings_Audio_AudioPlay"	"Chọn thiết bị phát là"
-"[english]Settings_Audio_AudioPlay"	"Set Playback device to"
-"Settings_Audio_AudioRecord"	"Đặt thiết bị ghi âm sang"
-"[english]Settings_Audio_AudioRecord"	"Set Record device to"
+"Settings_Audio_AudioPlay"	"Thiết bị phát âm"
+"[english]Settings_Audio_AudioPlay"	"Audio output device"
+"Settings_Audio_AudioRecord"	"Thiết bị thu âm"
+"[english]Settings_Audio_AudioRecord"	"Audio input device"
 "Settings_Audio_Off"	"Khi không dùng SteamVR..."
 "[english]Settings_Audio_Off"	"When not use SteamVR..."
 "Settings_Audio_HDMIGain"	"Bật giảm khuếch đại trên VIVE HDMI Audio"
@@ -1652,6 +1652,8 @@
 "[english]PlaylistEditor_General_WorkingDirectory_Label"	"Working Directory:"
 "PlaylistEditor_General_DotDotDot_Label"	"..."
 "[english]PlaylistEditor_General_DotDotDot_Label"	"..."
+"PlaylistEditor_General_ForceAudioVolume_Label"	"Ép âm lượng:"
+"[english]PlaylistEditor_General_ForceAudioVolume_Label"	"Force Audio Volume:"
 "PlaylistEditor_General_PlaySoundBeforeEnd_Label"	"Phát âm trước khi hết:"
 "[english]PlaylistEditor_General_PlaySoundBeforeEnd_Label"	"Play sound before end:"
 "PlaylistEditor_General_Seconds_Label"	"giây"
@@ -2492,5 +2494,23 @@
 "[english]HeadsetView_DebugCommands"	"Open Debug Commands"
 "HeadsetView_HideButtonLabel"	"Ẩn chế độ nhìn VR"
 "[english]HeadsetView_HideButtonLabel"	"Hide VR View"
+"FirmwareWizard_Failure_WirelessUpdateBaseStuckInDFU"	"Một kết nối USB không ngờ với trạm theo dõi đã ngăn việc hoàn thành cập nhật không dây.<ul><li><font color=#aaaa00>Tháo dây nguồn của trạm theo dõi.<li>Tháo dây USB đang cắm vào trạm theo dõi.<li>Chỉ cắm lại dây nguồn trạm theo dõi.<li>Đợi 30 giây để trạm theo dõi hoàn thành cập nhật nội bộ.</font></ul><br>Đèn LED trạm theo dõi có thể tắt trong lúc cập nhật nội bộ.<br>Xin đừng tháo dây hoặc kết nối bất kỳ thứ gì với trạm theo dõi trong quá trình cập nhật."
+"[english]FirmwareWizard_Failure_WirelessUpdateBaseStuckInDFU"	"An unexpected USB connection to the Base Station is preventing the wireless update from finishing.<ul><li><font color=#aaaa00>Unplug the Base Station's power cable.<li>Unplug the USB cable that is plugged into the Base Station.<li>Replug only the Base Station's power cable.<li>Wait 30 seconds for the Base Station to finish its internal update.</font></ul><br>The Base Station LED may be off during its internal update.<br>Do not unplug or make any other connections to the Base Station during its update."
+"Settings_Audio_Device_HMD"	"Mũ chụp VR"
+"[english]Settings_Audio_Device_HMD"	"VR Headset"
+"Settings_Audio_Device_Other"	"Khác"
+"[english]Settings_Audio_Device_Other"	"Other"
+"Settings_Audio_Default"	"Mặc định"
+"[english]Settings_Audio_Default"	"Default"
+"Settings_Audio_AudioMirrorEnable"	"Bật lặp âm thanh"
+"[english]Settings_Audio_AudioMirrorEnable"	"Enable audio mirror"
+"FirmwareWizard_UpdateBasestationWireless_Fail_BaseStuckInDFU"	"Một kết nối USB không ngờ với trạm theo dõi đã ngăn việc hoàn thành cập nhật không dây.<ul><li><font color=#aaaa00>Tháo dây nguồn của trạm theo dõi.<li>Tháo dây USB đang cắm vào trạm theo dõi.<li>Chỉ cắm lại dây nguồn trạm theo dõi.<li>Đợi 30 giây để trạm theo dõi hoàn thành cập nhật nội bộ.</font></ul><br>Đèn LED trạm theo dõi có thể tắt trong lúc cập nhật nội bộ.<br>Xin đừng tháo dây hoặc kết nối bất kỳ thứ gì với trạm theo dõi trong quá trình cập nhật."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_BaseStuckInDFU"	"An unexpected USB connection to the Base Station is preventing the wireless update from finishing.<ul><li><font color=#aaaa00>Unplug the Base Station's power cable.<li>Unplug the USB cable that is plugged into the Base Station.<li>Replug only the Base Station's power cable.<li>Wait 30 seconds for the Base Station to finish its internal update.</font></ul><br>The Base Station LED may be off during its internal update.<br>Do not unplug or make any other connections to the Base Station during its update."
+"FirmwareWizard_UpdateBasestationWireless_Fail_BaseNeedsPowerCycle"	"Trạm theo dõi này cần được bật tắt nguồn điện để tiếp tục cập nhật.<br><br><font color=#aaaa00>Vui lòng tháo dây rồi cắm lại dây nguồn của trạm theo dõi trước khi tiếp tục.</font>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_BaseNeedsPowerCycle"	"This Base Station needs to be power cycled to continue the update.<br><br><font color=#aaaa00>Please unplug and then replug the Base Station's power cable before continuing.</font>"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox_BS20"	"Nếu quá trình cập nhật thiết bị tiếp tục thất bại... <ul><li>Thoát SteamVR.<li>Tháo bất kỳ dây USB nào đang kết nối với trạm theo dõi.<li>KHÔNG kết nối USB với trạm theo dõi.<li>Tháo dây và cắm lại dây nguồn Link Box.<li>Tháo dây và cắm lại dây nguồn trạm theo dõi.<li>Khởi chạy SteamVR và thử lại.</ul>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox_BS20"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug any USB cable connected to the Base Station.<li>Do NOT connect USB to the Base Station.<li>Unplug and replug the Link Box power cable.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR and try again.</ul>"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_BS20"	"Nếu quá trình cập nhật thiết bị tiếp tục thất bại... <ul><li>Thoát SteamVR.<li>Tháo bất kỳ dây USB nào đang kết nối với trạm theo dõi.<li>KHÔNG kết nối USB với trạm theo dõi.<li>Tháo dây và cắm lại dây nguồn trạm theo dõi.<li>Khởi chạy SteamVR và thử lại.</ul>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_BS20"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug any USB cable connected to the Base Station.<li>Do NOT connect USB to the Base Station.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR and try again.</ul>"
 }
 }
