--- a/content/vrmonitor/translations/vrmonitor_danish.txt
+++ b/content/vrmonitor/translations/vrmonitor_danish.txt
@@ -1111,10 +1111,10 @@
 "[english]Settings_Audio_Header"	"Audio Settings"
 "Settings_Audio_On"	"Når SteamVR anvendes..."
 "[english]Settings_Audio_On"	"When using SteamVR..."
-"Settings_Audio_AudioPlay"	"Sæt afspilningsenhed til at være"
-"[english]Settings_Audio_AudioPlay"	"Set Playback device to"
-"Settings_Audio_AudioRecord"	"Sæt optagelsesenhed til at være"
-"[english]Settings_Audio_AudioRecord"	"Set Record device to"
+"Settings_Audio_AudioPlay"	"Outputenhed til lyd"
+"[english]Settings_Audio_AudioPlay"	"Audio output device"
+"Settings_Audio_AudioRecord"	"Inputenhed til lyd"
+"[english]Settings_Audio_AudioRecord"	"Audio input device"
 "Settings_Audio_Off"	"Når SteamVR ikke anvendes..."
 "[english]Settings_Audio_Off"	"When not use SteamVR..."
 "Settings_Audio_HDMIGain"	"Aktiver forstærkningsreduktion på VIVE HDMI-lyd"
@@ -2559,5 +2559,31 @@
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_USBConnected"	"An unexpected USB connection to the Base Station is preventing the wireless update.<br><br><font color=#aaaa00>Please unplug the USB cable that is plugged into the Base Station.</font>"
 "FirmwareWizard_Failure_WirelessUpdateBaseStuckInDFU"	"En uventet USB-forbindelse til basisstationen forhindrer den trådløse opdatering i at blive færdig.<ul><li><font color=#aaaa00>Træk strømkablet til basisstationen ud.<li>Træk USB-kablet, som er sluttet til basisstationen, ud.<li>Tilslut udelukkende strømkablet til basisstationen igen.<li>Vent i 30 sekunder, indtil basisstationen er færdig med den interne opdatering.</font></ul><br>Lysdioden på basisstationen er muligvis slukket under den interne opdatering.<br>Træk ikke strømkablet ud, og tilslut ikke andet til basisstationen, så længe opdateringen er i gang."
 "[english]FirmwareWizard_Failure_WirelessUpdateBaseStuckInDFU"	"An unexpected USB connection to the Base Station is preventing the wireless update from finishing.<ul><li><font color=#aaaa00>Unplug the Base Station's power cable.<li>Unplug the USB cable that is plugged into the Base Station.<li>Replug only the Base Station's power cable.<li>Wait 30 seconds for the Base Station to finish its internal update.</font></ul><br>The Base Station LED may be off during its internal update.<br>Do not unplug or make any other connections to the Base Station during its update."
+"Settings_Audio_Device_HMD"	"VR-headset"
+"[english]Settings_Audio_Device_HMD"	"VR Headset"
+"Settings_Audio_Device_Other"	"Andet"
+"[english]Settings_Audio_Device_Other"	"Other"
+"Settings_Audio_Default"	"Standardindstilling"
+"[english]Settings_Audio_Default"	"Default"
+"Settings_Audio_AudioMirrorEnable"	"Slå lydspejl til"
+"[english]Settings_Audio_AudioMirrorEnable"	"Enable audio mirror"
+"FirmwareWizard_UpdateBasestationWireless_Fail_BaseStuckInDFU"	"En uventet USB-forbindelse til basisstationen forhindrer den trådløse opdatering i at blive færdig.<ul><li><font color=#aaaa00>Træk strømkablet til basisstationen ud.<li>Træk USB-kablet, som er sluttet til basisstationen, ud.<li>Tilslut udelukkende strømkablet til basisstationen igen.<li>Vent i 30 sekunder, indtil basisstationen er færdig med den interne opdatering.</font></ul><br>Lysdioden på basisstationen er muligvis slukket under den interne opdatering.<br>Træk ikke strømkablet ud, og tilslut ikke andet til basisstationen, så længe opdateringen er i gang."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_BaseStuckInDFU"	"An unexpected USB connection to the Base Station is preventing the wireless update from finishing.<ul><li><font color=#aaaa00>Unplug the Base Station's power cable.<li>Unplug the USB cable that is plugged into the Base Station.<li>Replug only the Base Station's power cable.<li>Wait 30 seconds for the Base Station to finish its internal update.</font></ul><br>The Base Station LED may be off during its internal update.<br>Do not unplug or make any other connections to the Base Station during its update."
+"FirmwareWizard_UpdateBasestationWireless_Fail_BaseNeedsPowerCycle"	"Denne basisstation skal genstartes for at fortsætte opdateringen.<br><br><font color=#aaaa00>Fjern strømstikket til basisstationen, og tilslut det igen, før du fortsætter.</font>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_BaseNeedsPowerCycle"	"This Base Station needs to be power cycled to continue the update.<br><br><font color=#aaaa00>Please unplug and then replug the Base Station's power cable before continuing.</font>"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox_BS20"	"Hvis der fortsat opstår fejl med enhedsopdateringen... <ul><li>Afslut SteamVR.<li>Fjern alle USB-kabler, som er tilsluttet til basisstationen.<li>Tilslut IKKE USB-kabel til basisstationen.<li>Fjern og tilslut strømstikket til Link Box-enheden.<li>Fjern og tilslut strømstikket til basisstationen.<li>Start SteamVR, og prøv igen.</ul>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox_BS20"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug any USB cable connected to the Base Station.<li>Do NOT connect USB to the Base Station.<li>Unplug and replug the Link Box power cable.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR and try again.</ul>"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_BS20"	"Hvis der fortsat opstår fejl med enhedsopdateringen... <ul><li>Afslut SteamVR.<li>Fjern alle USB-kabler, som er tilsluttet til basisstationen.<li>Tilslut IKKE USB-kabel til basisstationen.<li>Fjern og tilslut strømstikket til basisstationen.<li>Start SteamVR, og prøv igen.</ul>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_BS20"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug any USB cable connected to the Base Station.<li>Do NOT connect USB to the Base Station.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR and try again.</ul>"
+"BS_PromotePowerManagement_Title"	"SteamVR"
+"[english]BS_PromotePowerManagement_Title"	"SteamVR"
+"BS_PromotePowerManagement_Explanation"	"SteamVR kan håndtere strømstyring af dine basisstationer.<br><br>Strømstyrede basisstationer går i standbytilstand, når SteamVR ikke er i brug, og vågner op igen, når SteamVR starter.<br>"
+"[english]BS_PromotePowerManagement_Explanation"	"SteamVR can power manage your Base Stations.<br><br>Power managed Base Stations go into standby mode when SteamVR is not in use and wake up again when SteamVR starts.<br>"
+"BS_PromotePowerManagement_Enable"	"Slå strømstyring af basisstationer til *"
+"[english]BS_PromotePowerManagement_Enable"	"Enable Base Station Power Management *"
+"BS_PromotePowerManagement_Explanation2"	"<br><font color=#ffffff>* ANBEFALES IKKE til sporingsområder, som deles mellem flere SteamVR-brugere.</font>"
+"[english]BS_PromotePowerManagement_Explanation2"	"<br><font color=#ffffff>* NOT RECOMMENDED for shared tracking spaces with multiple SteamVR users.</font>"
+"BS_PromotePowerManagement_ExitNow"	"Afslut nu (%1)"
+"[english]BS_PromotePowerManagement_ExitNow"	"Exit Now (%1)"
 }
 }
