--- a/content/vrmonitor/translations/vrmonitor_errors_thai.txt
+++ b/content/vrmonitor/translations/vrmonitor_errors_thai.txt
@@ -1284,5 +1284,7 @@
 "[english]VRInitError_Compositor_FailedToCreateDirectModeDisplay_ActionURL"	"https://support.steampowered.com/kb_article.php?ref=3803-QDGM-9237"
 "Warning_DismissableWarning_DevelopmentHardwareNotSupported_Header"	"อุปกรณ์ไม่รองรับอีกต่อไป"
 "[english]Warning_DismissableWarning_DevelopmentHardwareNotSupported_Header"	"Device No Longer Supported"
+"Warning_DismissableWarning_DevelopmentHardwareNotSupported_Description"	"<font color=#aaaa00>การเตรียมการผลิต %1 ของคุณจะไม่ได้รับการรองรับอีกต่อไป</font> <br><br> อุปกรณ์นี้จะไม่สามารถรับการอัปเดตเฟิร์มแวร์ได้อีกและคาดว่าคุณสมบัติจะลดน้อยลง กรุณาเปลี่ยนอุปกรณ์นี้โดยเร็วที่สุด<br><br>(hwid: %2)"
+"[english]Warning_DismissableWarning_DevelopmentHardwareNotSupported_Description"	"<font color=#aaaa00>Your pre-production %1 is no longer supported.</font> <br><br> This device will no longer receive firmware updates, and diminished functionality is expected. Please replace at your earliest convenience. <br><br>(hwid: %2)"
 }
 }
