--- a/content/vrmonitor/translations/vrmonitor_hungarian.txt
+++ b/content/vrmonitor/translations/vrmonitor_hungarian.txt
@@ -1126,10 +1126,10 @@
 "[english]Settings_Audio_Header"	"Audio Settings"
 "Settings_Audio_On"	"Amikor a SteamVR használva van..."
 "[english]Settings_Audio_On"	"When using SteamVR..."
-"Settings_Audio_AudioPlay"	"Lejátszóeszköz beállítása erre:"
-"[english]Settings_Audio_AudioPlay"	"Set Playback device to"
-"Settings_Audio_AudioRecord"	"Felvevőeszköz beállítása erre:"
-"[english]Settings_Audio_AudioRecord"	"Set Record device to"
+"Settings_Audio_AudioPlay"	"Hangkimeneti eszköz"
+"[english]Settings_Audio_AudioPlay"	"Audio output device"
+"Settings_Audio_AudioRecord"	"Hangbemeneti eszköz"
+"[english]Settings_Audio_AudioRecord"	"Audio input device"
 "Settings_Audio_Off"	"Amikor a SteamVR nincs használva..."
 "[english]Settings_Audio_Off"	"When not use SteamVR..."
 "Settings_Audio_HDMIGain"	"Erősítéscsökkentés engedélyezése a VIVE HDMI hangon"
@@ -2582,5 +2582,31 @@
 "[english]FirmwareWizard_UpdateBasestationWireless_Fail_USBConnected"	"An unexpected USB connection to the Base Station is preventing the wireless update.<br><br><font color=#aaaa00>Please unplug the USB cable that is plugged into the Base Station.</font>"
 "FirmwareWizard_Failure_WirelessUpdateBaseStuckInDFU"	"Egy váratlan USB-kapcsolat a bázisállomással megakadályozza a vezeték nélküli frissítés befejeződését.<ul><li><font color=#aaaa00>Húzd ki a bázisállomás tápkábelét.<li>Húzd ki azt az USB-kábelt, ami a bázisállomásba van bedugva.<li>Dugd vissza csak a bázisállomás tápkábelét.<li>Várj 30 másodpercet, hogy a bázisállomás befejezze a belső frissítést.</font></ul><br>A bázisállomás LED-je e belső frissítés ideje alatt kikapcsolhat.<br>E frissítés során ne húzd ki a bázisállomást, és ne létesíts rajta bármilyen másik csatlakozást."
 "[english]FirmwareWizard_Failure_WirelessUpdateBaseStuckInDFU"	"An unexpected USB connection to the Base Station is preventing the wireless update from finishing.<ul><li><font color=#aaaa00>Unplug the Base Station's power cable.<li>Unplug the USB cable that is plugged into the Base Station.<li>Replug only the Base Station's power cable.<li>Wait 30 seconds for the Base Station to finish its internal update.</font></ul><br>The Base Station LED may be off during its internal update.<br>Do not unplug or make any other connections to the Base Station during its update."
+"Settings_Audio_Device_HMD"	"VR-fejszett"
+"[english]Settings_Audio_Device_HMD"	"VR Headset"
+"Settings_Audio_Device_Other"	"Egyéb"
+"[english]Settings_Audio_Device_Other"	"Other"
+"Settings_Audio_Default"	"Alapértelmezett"
+"[english]Settings_Audio_Default"	"Default"
+"Settings_Audio_AudioMirrorEnable"	"Hangtükrözés engedélyezése"
+"[english]Settings_Audio_AudioMirrorEnable"	"Enable audio mirror"
+"FirmwareWizard_UpdateBasestationWireless_Fail_BaseStuckInDFU"	"Egy váratlan USB-kapcsolat a bázisállomással megakadályozza a vezeték nélküli frissítés befejeződését.<ul><li><font color=#aaaa00>Húzd ki a bázisállomás tápkábelét.<li>Húzd ki azt az USB-kábelt, ami a bázisállomásba van bedugva.<li>Dugd vissza csak a bázisállomás tápkábelét.<li>Várj 30 másodpercet, hogy a bázisállomás befejezze a belső frissítést.</font></ul><br>A bázisállomás LED-je e belső frissítés ideje alatt kikapcsolhat.<br>E frissítés során ne húzd ki a bázisállomást, és ne létesíts rajta bármilyen másik csatlakozást."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_BaseStuckInDFU"	"An unexpected USB connection to the Base Station is preventing the wireless update from finishing.<ul><li><font color=#aaaa00>Unplug the Base Station's power cable.<li>Unplug the USB cable that is plugged into the Base Station.<li>Replug only the Base Station's power cable.<li>Wait 30 seconds for the Base Station to finish its internal update.</font></ul><br>The Base Station LED may be off during its internal update.<br>Do not unplug or make any other connections to the Base Station during its update."
+"FirmwareWizard_UpdateBasestationWireless_Fail_BaseNeedsPowerCycle"	"A frissítés folytatásához ezt a bázisállomást ki- és be kell kapcsolni.<br><br><font color=#aaaa00>A folytatás előtt kérjük, húzd ki és dugd vissza a bázisállomás tápkábelét.</font>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_BaseNeedsPowerCycle"	"This Base Station needs to be power cycled to continue the update.<br><br><font color=#aaaa00>Please unplug and then replug the Base Station's power cable before continuing.</font>"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox_BS20"	"Ha ez az eszközfrissítés továbbra is sikertelen bármiféle előrehaladás nélkül... <ul><li>Lépj ki a SteamVR-ből.<li>Húzd ki a bázisállomáshoz csatlakoztatott összes USB-kábelt.<li>NE csatlakoztass USB-kábelt a bázisállomáshoz.<li>Húzd ki és dugd vissza a Link Box tápkábelét.<li>Húzd ki és dugd vissza a bázisállomás tápkábelét.<li>Indítsd el a SteamVR-t, és próbáld újra.</ul>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox_BS20"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug any USB cable connected to the Base Station.<li>Do NOT connect USB to the Base Station.<li>Unplug and replug the Link Box power cable.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR and try again.</ul>"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_BS20"	"Ha ez az eszközfrissítés továbbra is sikertelen bármiféle előrehaladás nélkül... <ul><li>Lépj ki a SteamVR-ből.<li>Húzd ki a bázisállomáshoz csatlakoztatott összes USB-kábelt.<li>NE csatlakoztass USB-kábelt a bázisállomáshoz.<li>Húzd ki és dugd vissza a bázisállomás tápkábelét.<li>Indítsd el a SteamVR-t, és próbáld újra.</ul>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_BS20"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug any USB cable connected to the Base Station.<li>Do NOT connect USB to the Base Station.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR and try again.</ul>"
+"BS_PromotePowerManagement_Title"	"SteamVR"
+"[english]BS_PromotePowerManagement_Title"	"SteamVR"
+"BS_PromotePowerManagement_Explanation"	"A SteamVR kezelni tudja bázisállomásaid energiagazdálkodását.<br><br>Az energiagazdálkodást használó bázisállomások készenléti módba lépnek, amikor a SteamVR nincs használva, és felébrednek, amikor a SteamVR elindul.<br>"
+"[english]BS_PromotePowerManagement_Explanation"	"SteamVR can power manage your Base Stations.<br><br>Power managed Base Stations go into standby mode when SteamVR is not in use and wake up again when SteamVR starts.<br>"
+"BS_PromotePowerManagement_Enable"	"Bázisállomás-energiagazdálkodás bekapcsolása *"
+"[english]BS_PromotePowerManagement_Enable"	"Enable Base Station Power Management *"
+"BS_PromotePowerManagement_Explanation2"	"<br><font color=#ffffff>* Több SteamVR felhasználós osztott követési térben NEM JAVASOLT.</font>"
+"[english]BS_PromotePowerManagement_Explanation2"	"<br><font color=#ffffff>* NOT RECOMMENDED for shared tracking spaces with multiple SteamVR users.</font>"
+"BS_PromotePowerManagement_ExitNow"	"Kilépés most (%1)"
+"[english]BS_PromotePowerManagement_ExitNow"	"Exit Now (%1)"
 }
 }
