--- a/content/vrmonitor/translations/vrmonitor_koreana.txt
+++ b/content/vrmonitor/translations/vrmonitor_koreana.txt
@@ -1111,10 +1111,10 @@
 "[english]Settings_Audio_Header"	"Audio Settings"
 "Settings_Audio_On"	"SteamVR이 활성화할 때"
 "[english]Settings_Audio_On"	"When using SteamVR..."
-"Settings_Audio_AudioPlay"	"재생 장치 설정"
-"[english]Settings_Audio_AudioPlay"	"Set Playback device to"
-"Settings_Audio_AudioRecord"	"녹음 장치 설정"
-"[english]Settings_Audio_AudioRecord"	"Set Record device to"
+"Settings_Audio_AudioPlay"	"오디오 출력 장치"
+"[english]Settings_Audio_AudioPlay"	"Audio output device"
+"Settings_Audio_AudioRecord"	"오디오 입력 장치"
+"[english]Settings_Audio_AudioRecord"	"Audio input device"
 "Settings_Audio_Off"	"SteamVR이 종료할 때"
 "[english]Settings_Audio_Off"	"When not use SteamVR..."
 "Settings_Audio_HDMIGain"	"VIVE HDMI 오디오 게인 감소 활성화"
@@ -1905,11 +1905,25 @@
 "[english]Settings_NightModeDesc"	"Dim the headset until 5:00 AM (or until SteamVR is restarted)."
 "Settings_PauseOnStandby"	"헤드셋이 유휴 상태일 때 렌더링 일시 정지"
 "[english]Settings_PauseOnStandby"	"Pause rendering when headset is idle"
+"MenuAction_RunMediaPlayer"	"미디어 플레이어"
+"[english]MenuAction_RunMediaPlayer"	"Media Player"
+"Advanced_Bluetooth"	"블루투스"
+"[english]Advanced_Bluetooth"	"Bluetooth"
 "Settings_Advanced_Paths_Header"	"경로"
 "[english]Settings_Advanced_Paths_Header"	"Paths"
 "Settings_GpuInfo_Header"	"하드웨어"
 "[english]Settings_GpuInfo_Header"	"Hardware"
 "MenuAction_ShowControllerBinding"	"컨트롤러 설정"
 "[english]MenuAction_ShowControllerBinding"	"Controller Settings"
+"Settings_Audio_Device_HMD"	"VR 헤드셋"
+"[english]Settings_Audio_Device_HMD"	"VR Headset"
+"Settings_Audio_Device_Other"	"그 외"
+"[english]Settings_Audio_Device_Other"	"Other"
+"Settings_Audio_Default"	"기본 설정"
+"[english]Settings_Audio_Default"	"Default"
+"Settings_Audio_AudioMirrorEnable"	"오디오 미러 사용"
+"[english]Settings_Audio_AudioMirrorEnable"	"Enable audio mirror"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox_BS20"	"이 장치 업데이트가 진행되지 못하고 계속 실패하는 경우... <ul><li>SteamVR을 종료하세요.<li>베이스 스테이션에 연결된 모든 USB 케이블을 분리하세요.<li>베이스 스테이션에 USB를 연결하지 마세요.<li>링크 박스의 전원 케이블을 분리했다가 다시 연결하세요.<li>베이스 스테이션의 전원 케이블을 분리했다가 다시 연결하세요.<li>SteamVR을 실행하고 다시 시도해 보세요.</ul>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox_BS20"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug any USB cable connected to the Base Station.<li>Do NOT connect USB to the Base Station.<li>Unplug and replug the Link Box power cable.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR and try again.</ul>"
 }
 }
