--- a/content/vrmonitor/translations/vrmonitor_portuguese.txt
+++ b/content/vrmonitor/translations/vrmonitor_portuguese.txt
@@ -1114,7 +1114,7 @@
 "[english]FirmwareWizard_WatchmanUpdate"	"Tracking Device Update"
 "FirmwareWizard_DongleUpdate"	"Atualização do recetor sem fios"
 "[english]FirmwareWizard_DongleUpdate"	"Wireless Receiver Update"
-"FirmwareWizard_RadioUpdate"	"Atualização do Rádio"
+"FirmwareWizard_RadioUpdate"	"Atualização do rádio"
 "[english]FirmwareWizard_RadioUpdate"	"Radio Update"
 "FirmwareWizard_DisplayUpdate"	"Atualização de ecrã"
 "[english]FirmwareWizard_DisplayUpdate"	"Display Update"
@@ -1126,10 +1126,10 @@
 "[english]Settings_Audio_Header"	"Audio Settings"
 "Settings_Audio_On"	"Se o SteamVR estiver ativo..."
 "[english]Settings_Audio_On"	"When using SteamVR..."
-"Settings_Audio_AudioPlay"	"Usar este dispositivo de reprodução:"
-"[english]Settings_Audio_AudioPlay"	"Set Playback device to"
-"Settings_Audio_AudioRecord"	"Usar este dispositivo de gravação:"
-"[english]Settings_Audio_AudioRecord"	"Set Record device to"
+"Settings_Audio_AudioPlay"	"Dispositivo de saída de áudio"
+"[english]Settings_Audio_AudioPlay"	"Audio output device"
+"Settings_Audio_AudioRecord"	"Dispositivo de entrada de áudio"
+"[english]Settings_Audio_AudioRecord"	"Audio input device"
 "Settings_Audio_Off"	"Se o SteamVR não estiver ativo..."
 "[english]Settings_Audio_Off"	"When not use SteamVR..."
 "Settings_Audio_HDMIGain"	"Ativar redução de ganho no áudio HDMI do VIVE"
@@ -2550,9 +2550,9 @@
 "[english]HeadsetView_PressKeyToExit"	"Press %1 to exit Full Screen"
 "HeadsetView_FullscreenButtonLabel"	"Ecrã completo"
 "[english]HeadsetView_FullscreenButtonLabel"	"Full Screen"
-"HeadsetView_DockButtonLabel"	"Juntar vista"
+"HeadsetView_DockButtonLabel"	"Juntar vista de R.V."
 "[english]HeadsetView_DockButtonLabel"	"Dock VR View"
-"HeadsetView_UndockButtonLabel"	"Separar vista"
+"HeadsetView_UndockButtonLabel"	"Separar vista de R.V."
 "[english]HeadsetView_UndockButtonLabel"	"Undock VR View"
 "HeadsetView_CloseButtonLabel"	"Fechar"
 "[english]HeadsetView_CloseButtonLabel"	"Close"
@@ -2572,5 +2572,31 @@
 "[english]HeadsetView_DebugCommands"	"Open Debug Commands"
 "HeadsetView_HideButtonLabel"	"Ocultar vista de R.V."
 "[english]HeadsetView_HideButtonLabel"	"Hide VR View"
+"Settings_PerApplication_Reprojection_Header"	"Reprojeção"
+"[english]Settings_PerApplication_Reprojection_Header"	"Reprojection"
+"Settings_PerApplication_Reprojection_Checkbox"	"Usar modo de reprojeção clássico"
+"[english]Settings_PerApplication_Reprojection_Checkbox"	"Use legacy reprojection mode"
+"Settings_PerApplication_Reprojection_Description"	"Marcar esta opção irá desativar a reprojeção assíncrona neste jogo."
+"[english]Settings_PerApplication_Reprojection_Description"	"Checking this option will disable asynchronous reprojection for this title."
+"FirmwareWizard_UpdateBasestationWireless_Fail_USBConnected"	"Uma ligação USB inesperada à estação-base está a impedir que a atualização sem fios seja realizada.<br><br><font color=#aaaa00>Desliga o cabo USB ligado à estação-base.</font>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_USBConnected"	"An unexpected USB connection to the Base Station is preventing the wireless update.<br><br><font color=#aaaa00>Please unplug the USB cable that is plugged into the Base Station.</font>"
+"FirmwareWizard_Failure_WirelessUpdateBaseStuckInDFU"	"Uma ligação USB inesperada à estação-base está a impedir que a atualização sem fios seja concluída.<ul><li><font color=#aaaa00>Desliga o cabo de alimentação da estação-base.<li>Desliga o cabo USB ligado à estação-base.<li>Volta a ligar apenas o cabo de alimentação da estação-base.<li>Aguarda 30 segundos para que a estação-base termine a sua atualização interna.</font></ul><br>A luz da estação-base pode estar desligada durante a atualização interna.<br>Não desligues nem ligues alguma coisa à estação-base durante a atualização."
+"[english]FirmwareWizard_Failure_WirelessUpdateBaseStuckInDFU"	"An unexpected USB connection to the Base Station is preventing the wireless update from finishing.<ul><li><font color=#aaaa00>Unplug the Base Station's power cable.<li>Unplug the USB cable that is plugged into the Base Station.<li>Replug only the Base Station's power cable.<li>Wait 30 seconds for the Base Station to finish its internal update.</font></ul><br>The Base Station LED may be off during its internal update.<br>Do not unplug or make any other connections to the Base Station during its update."
+"Settings_Audio_Device_HMD"	"Headset de R.V."
+"[english]Settings_Audio_Device_HMD"	"VR Headset"
+"Settings_Audio_Device_Other"	"Outro"
+"[english]Settings_Audio_Device_Other"	"Other"
+"Settings_Audio_Default"	"Padrão"
+"[english]Settings_Audio_Default"	"Default"
+"Settings_Audio_AudioMirrorEnable"	"Ativar reencaminhamento de áudio"
+"[english]Settings_Audio_AudioMirrorEnable"	"Enable audio mirror"
+"FirmwareWizard_UpdateBasestationWireless_Fail_BaseStuckInDFU"	"Uma ligação USB inesperada à estação-base está a impedir que a atualização sem fios seja concluída.<ul><li><font color=#aaaa00>Desliga o cabo de alimentação da estação-base.<li>Desliga o cabo USB ligado à estação-base.<li>Volta a ligar apenas o cabo de alimentação da estação-base.<li>Aguarda 30 segundos para que a estação-base termine a sua atualização interna.</font></ul><br>A luz da estação-base pode estar desligada durante a atualização interna.<br>Não desligues nem ligues alguma coisa à estação-base durante a atualização."
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_BaseStuckInDFU"	"An unexpected USB connection to the Base Station is preventing the wireless update from finishing.<ul><li><font color=#aaaa00>Unplug the Base Station's power cable.<li>Unplug the USB cable that is plugged into the Base Station.<li>Replug only the Base Station's power cable.<li>Wait 30 seconds for the Base Station to finish its internal update.</font></ul><br>The Base Station LED may be off during its internal update.<br>Do not unplug or make any other connections to the Base Station during its update."
+"FirmwareWizard_UpdateBasestationWireless_Fail_BaseNeedsPowerCycle"	"Esta estação-base precisa primeiro de ser desligada e ligada novamente para continuar com a atualização.<br><br><font color=#aaaa00>Por favor, desliga e volta a ligar o cabo de alimentação da estação-base antes de continuares.</font>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_BaseNeedsPowerCycle"	"This Base Station needs to be power cycled to continue the update.<br><br><font color=#aaaa00>Please unplug and then replug the Base Station's power cable before continuing.</font>"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox_BS20"	"Se a atualização deste dispositivo continuar a falhar sem que haja progresso:<ul><li>Sai do SteamVR.<li>Desliga qualquer cabo USB que esteja ligado à estação-base.<li>NÃO ligues nada à porta USB da estação-base.<li>Desliga e volta a ligar o cabo de alimentação da Link Box.<li>Desliga e volta a ligar o cabo de alimentação da estação-base.<li>Inicia o SteamVR e tenta de novo.</ul>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_UsingLinkBox_BS20"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug any USB cable connected to the Base Station.<li>Do NOT connect USB to the Base Station.<li>Unplug and replug the Link Box power cable.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR and try again.</ul>"
+"FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_BS20"	"Se a atualização deste dispositivo continuar a falhar sem que haja progresso:<ul><li>Sai do SteamVR.<li>Desliga qualquer cabo USB que esteja ligado à estação-base.<li>NÃO ligues nada à porta USB da estação-base.<li>Desliga e volta a ligar o cabo de alimentação da estação-base.<li>Inicia o SteamVR e tenta de novo.</ul>"
+"[english]FirmwareWizard_UpdateBasestationWireless_Fail_MiddleText_BS20"	"If this device update continues to fail without making progress... <ul><li>Quit SteamVR.<li>Unplug any USB cable connected to the Base Station.<li>Do NOT connect USB to the Base Station.<li>Unplug and replug the Base Station power cable.<li>Launch SteamVR and try again.</ul>"
 }
 }
