--- a/content/vrmonitor/translations/vrmonitor_swedish.txt
+++ b/content/vrmonitor/translations/vrmonitor_swedish.txt
@@ -1126,9 +1126,9 @@
 "Settings_Audio_On"	"När SteamVR har fokus"
 "[english]Settings_Audio_On"	"When using SteamVR..."
 "Settings_Audio_AudioPlay"	"Sätt uppspelningsenhet till"
-"[english]Settings_Audio_AudioPlay"	"Set Playback device to"
+"[english]Settings_Audio_AudioPlay"	"Audio output device"
 "Settings_Audio_AudioRecord"	"Sätt inspelningsenhet till"
-"[english]Settings_Audio_AudioRecord"	"Set Record device to"
+"[english]Settings_Audio_AudioRecord"	"Audio input device"
 "Settings_Audio_Off"	"När du går ur SteamVR"
 "[english]Settings_Audio_Off"	"When not use SteamVR..."
 "Settings_Audio_HDMIGain"	"Aktivera Gain-reducering på VIVE HDMI-ljud"
