--- a/content/vrmonitor/translations/vrmonitor_tchinese.txt
+++ b/content/vrmonitor/translations/vrmonitor_tchinese.txt
@@ -1112,9 +1112,9 @@
 "Settings_Audio_On"	"當 SteamVR 啟用時"
 "[english]Settings_Audio_On"	"When using SteamVR..."
 "Settings_Audio_AudioPlay"	"將播放裝置設為"
-"[english]Settings_Audio_AudioPlay"	"Set Playback device to"
+"[english]Settings_Audio_AudioPlay"	"Audio output device"
 "Settings_Audio_AudioRecord"	"將錄音裝置設為"
-"[english]Settings_Audio_AudioRecord"	"Set Record device to"
+"[english]Settings_Audio_AudioRecord"	"Audio input device"
 "Settings_Audio_Off"	"在離開 SteamVR 時"
 "[english]Settings_Audio_Off"	"When not use SteamVR..."
 "Settings_Audio_HDMIGain"	"在 VIVE HDMI 音訊上啟用增益衰減"
@@ -2157,5 +2157,11 @@
 "[english]Monitor_SpontaneousQuitDialog_Restart"	"Restart SteamVR"
 "Monitor_SpontaneousQuitDialog_Quit"	"退出 SteamVR"
 "[english]Monitor_SpontaneousQuitDialog_Quit"	"Quit SteamVR"
+"BS20_ConfigureChannel_VisibleNowInTracking"	"於此定位工作階段可見。"
+"[english]BS20_ConfigureChannel_VisibleNowInTracking"	"Visible now in this tracking session."
+"BS20_ConfigureChannel_ObservedInTracking"	"發現於先前的定位工作階段。"
+"[english]BS20_ConfigureChannel_ObservedInTracking"	"Observed in a prior tracking session."
+"BS_PowerManagement_VisibleNowInTracking"	"於此定位工作階段可見"
+"[english]BS_PowerManagement_VisibleNowInTracking"	"Visible now in this tracking session."
 }
 }
